--- a/puja/veerabhadra-puja.html
+++ b/puja/veerabhadra-puja.html
@@ -1,500 +1,107 @@
 <!DOCTYPE html>
 <html lang="kn">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ವೀರಭದ್ರಸ್ವಾಮಿ ಪೂಜ (Veerabhadraswamy Puja)</title>
     <link rel="icon" type="image/x-icon" href="../favicon.ico">
-    
+
     <!-- Centralized Styles -->
     <link rel="stylesheet" href="../styles/common.css">
 </head>
 
 <body>
-    <h1>ಶ್ರೀ ವೀರಭದ್ರ ನಿತ್ಯ ಪೂಜಾ ವಿಧಾನಮ್ <span class="ENG">(Shri Veerabhadra Nitya Puja Vidhanam)</span></h1>
+    <h1>ವೀರಭದ್ರ ಪೂಜಾ ವಿಧಾನ<span class="ENG">(Veerabhadra Puja Vidhaana)</span></h1>
 
     <button class="toggle-btn" onclick="toggleVisibility()">Show/Hide English Transliteration</button>
 
-    <div id="shuddikarana-mantra"></div>
-    <div id="ganapati-prarthana"></div>
-    <div id="deepaaradhana"></div>
-
-    <h2>
-        ಆಚಮನಮ<span class="ENG">(Achamanam)</span>
-    </h2>
-
-    ಓಂ ಶಿವಾಯ ನಮಃ <br>
-    ಓಂ ಮಹೇಶ್ವರಾಯ ನಮಃ <br>
-    ಓಂ ಶಂಭವೇ ನಮಃ <br>
-    ಓಂ ಭರ್ಗಾಯ ನಮಃ <br>
-    ಓಂ ಶಂಕರಾಯ ನಮಃ <br>
-    ಓಂ ಶಾಶ್ವತಾಯ ನಮಃ <br>
-    ಓಂ ಪಶುಪತಯೇ ನಮಃ <br>
-    ಓಂ ಪರಬ್ರಹ್ಮಣೇ ನಮಃ <br>
-    ಓಂ ಬ್ರಹ್ಮಾದಿಪತಯೇ ನಮಃ <br>
-    ಓಂ ಪರಮೇಶ್ವರಾಯ ನಮಃ <br>
-    ಓಂ ಫಲಾಲೋಚನಾಯ ನಮಃ <br>
-    ಓಂ ಅಷ್ಟಮೂರ್ತಯೇ ನಮಃ <br>
-    ಓಂ ಮೃತ್ಯುಂಜಯಾಯ ನಮಃ <br>
-    ಓಂ ಮೃಡಾಯ ನಮಃ <br>
-    ಓಂ ಭೂತೇಶಾಯ ನಮಃ <br>
-    ಓಂ ಶರ್ವಾಯ ನಮಃ <br>
-    ಓಂ ಸರ್ವೇಶ್ವರಾಯ ನಮಃ <br>
-    ಓಂ ಸದಾಶಿವಾಯ ನಮಃ <br>
-    ಓಂ ಅಭವಾಯ ನಮಃ <br>
-    ಓಂ ಭೀಮಾಯ ನಮಃ <br>
-    ಓಂ ವಾಸುದೇವಾಯ ನಮಃ <br>
-    ಓಂ ತ್ರಿಪುರಾಂತಕಾಯ ನಮಃ <br>
-
+    <h2>ಆಚಮನ <span class="ENG">(Achamana)</span></h2>
     <p>
-        For the first three names, take water in your hand with a spoon and sip it three times. Bow and touch your head.
+        ॐ ಕೇಶವಾಯ ಸ್ವಾಹಾ । ॐ ನಾರಾಯಣಾಯ ಸ್ವಾಹಾ । ॐ ಮಾಧವಾಯ ಸ್ವಾಹಾ ।
     </p>
 
-    Here are the corrections: <br>
-    - ಭರ್ಗಾಯ to ಭವಾಯ <br>
-    - ಫಲಾಲೋಚನಾಯ to ತ್ರಿಲೋಚನಾಯ <br>
-    - ಅಭವಾಯ to ಅಖಂಡಾಯ <br>
-    - ವಾಸುದೇವಾಯ to ವಾಮದೇವಾಯ <br>
-
-
-    <div id="bhootoochchaatana"></div>
-
-    <div id="pranayama"></div>
-
-    <h2>
-        ಪ್ರಾಣಾಯಾಮ
-    </h2>
-
+    <h2>ಪ್ರಾಣಾಯಾಮ <span class="ENG">(Pranayama)</span></h2>
     <p>
-        ಓಂ ದೈವೀ ಗಾಯತ್ರೀಚಂದಃ - ಪ್ರಾಣಾಯಾಮೇ ವಿನಿಯೋಗಃ || <br>
-        <br>
-        ಓಂ ಭೂಃ | ಓಂ ಭುವಃ | ಓಂ ಸುವಃ | <br>
-        ಓಂ ಮಹಃ | ಓಂ ಜನಃ | ಓಂ ತಪಃ | ಓಂ ಸತ್ಯಂ | <br>
-        ಓಂ ತತ್ಸವಿತುರ್ವೇಣ್ಯಂ ಭರ್ಗೋ ದೇವಸ್ಯ ಧೀಮಹಿ | <br>
-        ಧಿಯೋ ಯೋ ನಃ ಪ್ರಚೋದಯಾತ್ || <br>
-        <br>
-        ಓಂ ಅಪೋ ಜ್ಯೋತಿ ರಸೋಮೃತಂ ಬ್ರಹ್ಮ ಭೂ-ರ್ಭು-ವಸ್ಸುವರೋಮ್ ||
+
+        ॐ ಭೂಃ । ॐ ಭುವಃ । ॐ ಸ್ವಃ । ॐ ಮಹಃ । ॐ ಜನಃ । ॐ ತಪಃ । ॐ ಸತ್ಯಂ ।
     </p>
 
-    <h2>
-        ಸಂಕಲ್ಪ
-    </h2>
-
+    <h2>ಸಂಕಲ್ಪ <span class="ENG">(Sankalpam)</span></h2>
     <p>
-        ಮಮೋಪಾತ್ತ ದುರಿತಕ್ಷಯ ದ್ವಾರಾ ಶ್ರೀ ಪರಮೇಶ್ವರ ಮುದ್ದಿಶ್ಯ ಶ್ರೀ ಪರಮೇಶ್ವರ ಪ್ರೀತ್ಯರ್ಥಂ ಶುಭೇ ಶೋಭನೇ ಮುಹೂರ್ತೇ ಶ್ರೀ ಶಿವಶ್ಶಂಭೋ
-        ರಾಜ್ಞಾಯ ಪ್ರವರ್ತಮಾನಸ್ಯ ಅದ್ಯ (ಬ್ರಹ್ಮಣಃ ದ್ವಿತೀಯ ಪರಾರ್ಧೇ ಶ್ವೇತ ವರಾಹಕಲ್ಪೇ-ವೈವಸ್ವತ ಮನ್ವಂತರೇ-ಕಲಿಯುಗೇ (ಪ್ರಥಮಪಾದೇ
-        ಜಂಬೂದ್ವೀಪೇ ಭಾರತವರ್ಣೇ ಭಾರತಖಂಡೇ ಮೇರೋ ದಕ್ಷಿಣದಿಗ್ಭಾಗೇ ಶ್ರೀಶೈಲಸ್ಯ ಈಶಾನ್ಯ ಪ್ರದೇಶೇ ಕೃಷ್ಣಾ ಗೋದಾವರಿ ಮಧ್ಯ ಪ್ರದೇಶೇ ಅಸ್ಮಿನ್
-        ವರ್ತಮಾನ ವ್ಯಾವಹಾರಿಕ ಚಾಂದ್ರಮಾನೇನ ......ಸಂವ ತ್ಸರೇ....ಆಯನೇ.... ಬುದೌ...... ಮಾಸೇ... ಪಕ್ಷೇ... ತಿಥೌ ಶುಭನಕ್ಷತ್ರ ಶುಭಯೋಗ
-        ಶುಭಕರಣ ಏವಂಗುಣವಿಶೇಷಣ ವಿಶಿಷ್ಟಾಯಾಂ ಶುಭತಿಥೌ..... ಗೋತ್ರೋದ್ಭವಸ್ಯ..... ನಾಮಧೇಯಸ್ಯ ಮಮ ಕ್ಷೇಮಸ್ಥೈರ್ಯ ಅಭಯ ಆಯುರಾರೋಗ್ಯ
-        ಐಶ್ವರ್ಯಾಭಿವೃದ್ಧ್ಯರ್ಥಂ, ಈಪ್ಸಿತಾರ್ಥ ಸಿದ್ಧ್ಯರ್ಥಂ ಧರ್ಮಾರ್ಥ ಕಾಮ ಮೋಕ್ಷಂ ಚತುರ್ವಿಧ ಫಲಪುರುಷಾರ್ಥ ಸಿದ್ಧ್ಯರ್ಥಂ ಸಮಸ್ತ
-        ದುರಿತೋಪಶಮನಾರ್ಥಂ ಶ್ರೀವೀರಭದ್ರಸ್ವಾಮಿ ದೇವತಾಮುದ್ದಿಶ್ಯ, ಶ್ರೀವೀರಭದ್ರ ಸ್ವಾಮಿದೇವತಾ ಪ್ರೀತ್ಯರ್ಥಂ, ಯಥಾಶಕ್ತಿ ಧ್ಯಾನಾ ವಾಹನಾದಿ
-        ಷೋಡಶೋಪಚಾರ ಪೂಜಾಂ ಕರಿಷ್ಯೇ.
+        ಮಮ ಕುಟುಂಬಸ್ಯ ಆರೋಗ್ಯ, ರಕ್ಷಣೆ, ಶಾಂತಿ, ಐಶ್ವರ್ಯ ಸಿದ್ಧ್ಯರ್ಥಂ ಶ್ರೀ ರುದ್ರ ಜಪಂ ಕರಿಷ್ಯೇ
+    </p>
 
-        Highlighted changes:
+    <h2>ಧ್ಯಾನ <span class="ENG">(Dhyana)</span></h2>
+    Visualize that Veerabhadra is standing guard at your home.
+    <p>
+        ॐ ಹ್ರೀಂ ವೀರಭದ್ರಾಯ ನಮಃ (3 ಬಾರಿ)
+        <span class="ENG"><br>Om hrim veerabhadraaya nama: (3 times)</span>
+    </p>
 
-        ಭಾರತವರ್ಣೇ corrected to ಭಾರತವರ್ಷೇ
-        ಅನಿ ಉದಕಮನು ಸೃಶಿಂಪವಲಯುನು corrected to ಅನಿ ಉದಕವನ್ನು ಸೃಜಿಸಬೇಕು
-        ಚೆಪ್ಪುಟಕಲದು corrected to ಹೇಳಲಾಗುತ್ತದೆ
-        ಚೆಪ್ಪುಟಕು corrected to ಹೇಳಲು
-        ಮನ್ರಸ್ಕರಿಂಚನಿ corrected to ಮನಸ್ಸಿಲ್ಲದವರ
-        ಮಾರ್ಚುಕೊಂಡಗುನು corrected to ಬದಲಿಸಬಹುದು
-        ಅನಂತರಮು corrected to ನಂತರ
-        ಕಾವಿಂಪವಲಯುನು corrected to ಮಾಡಬೇಕು
-        ಚೆಂತ corrected to ಬಳಿ
-        ಉಂಚಿ corrected to ಇಟ್ಟು
-        ನಮಸ್ಕರಿಂಚವಲಯುನು corrected to ನಮಸ್ಕರಿಸಬೇಕು
-        ಅರಟಿಪಂಡುನು corrected to ಬಾಳೆಹಣ್ಣು
-        ನಿವೇದಿಂಚವಲೆನು corrected to ನಿವೇದಿಸಬೇಕು
-        ತರವಾತ corrected to ನಂತರ
-        ವದಲಿ corrected to ಬಿಡಿ
-        ಕಲಶಮುನುಕು corrected to ಕಲಶಕ್ಕೆ
-        ಗಂಧಮು corrected to ಗಂಧ
-        ಕುಂಕುಮಾದುಲು corrected to ಕುಂಕುಮ
-        ಮೂರು ಚೋಟುಲಂದು corrected to ಮೂರು ಸ್ಥಳಗಳಲ್ಲಿ
-        ಬೆಟ್ಟು ಬೆಟ್ಟು corrected to ಹಚ್ಚಿ
-        ಕಲಶಮುಂದು corrected to ಕಲಶದಲ್ಲಿ
-        ಪುಷ್ಪಮುನುಂಚಿ corrected to ಪುಷ್ಪವನ್ನು ಇಟ್ಟು
-        ಚೇತಿತೊ corrected to ಕೈಯಿಂದ
-        ಮೂಸಿ corrected to ಮುಚ್ಚಿ
+    <h2>ಶ್ರೀ ರುದ್ರಂ - ಪ್ರಥಮ ಅನುವಾಕ <span class="ENG">(Shri Rudram)</span></h2>
+    <p>
+        ॐ ನಮ॑ಸ್ತೇ ರು॒ದ್ರ ಮ॑ನ್ಯವ॒ ಉತೋ॑ತ ಇ॒ಷವೇ॑ ನಮಃ॒ । <br>
+        ನಮ॑ಸ್ತೇ ಅ॒ಸ್ತು ಧನ್ವ॑ನೇ ಬಾ॒ಹುಭ್ಯಾ॑ಮು॒ತ ತೇ॑ ನಮಃ॒ ॥ ೧ ॥ <br><br>
 
+        ಯಾ ತೇ॒ ರು॒ದ್ರ ಶಿ॑ವಾ ತ॒ನೂರ್ ಅ॒ಘೋರಾ॑ऽಪಾಪ॒ಕಾಶಿ॑ನಿ । <br>
+        ತಯಾ॑ ನ॒ಸ್ತನು॑ವಾ ಶಂ॒ತಮ॑ಯಾ ಗಿ॒ರಿಶಂ॑ತಾಭಿಚಾ॒ಕಾಶೀ॑ಹಿ ॥ ೨ ॥ <br><br>
+
+        ಯಾಮಿ॑ಷುಂ ಗಿ॒ರಿಶಂ॑ತ ಹ॒ಸ್ತೇ ಬಿ॑ಭರ್ಷ್ಯ॒ಸ್ತವೇ॑ । <br>
+        ಶಿ॒ವಾಂ ಗಿ॑ರಿತ್ರ॒ ತಾಂ ಕು॑ರು ಮಾಽ ಹಿಂ॒ಸೀಃ ಪು॑ರುಷಂ॒ ಜಗ॑ತ್ ॥ ೩ ॥ <br><br>
+
+        ಶಿ॒ವೇನ॑ ವಚ॒ಸಾ ತ್ವಾ॑ ಗಿ॒ರಿಶಾ॑ಚ್ಚಾ ವದಾಮಸಿ । <br>
+        ಯಥಾ॑ ನಃ ಸರ್ವ॒ಮಿಜ್ಜ॑ಗ॒ದಯ॑ಕ್ಷ್ಮಂ ಸು॒ಮನಾ॑ ಅಸತ್ ॥ ೪ ॥ <br><br>
+
+        ಅಧ್ಯ॑ವೋಚ॒ದಧಿ॑ವಕ್ತಾ ಪ್ರಥ॒ಮೋ ದೈವ್ಯೋ॑ ಭಿ॒ಷಕ್ । <br>
+        ಅಹೀಂ॑ಶ್ಚ ಸರ್ವಾ॒ಂಜಂಭ॑ಯನ್ ಸರ್ವಾ॑ಶ್ಚ ಯಾತು॒ಧಾನ್ಯಃ॑ ॥ ೫ ॥ <br><br>
+
+        ಅ॒ಸೌ ಯಸ್ತಾ॒ಮ್ರೋ ಅ॑ರುಣ ಉ॒ತ ಬ॒ಭ್ರುಃ ಸು॑ಮಂಗ॒ಲಃ । <br>
+        ಯೇ ಚೇ॒ಮಾಂ ರು॒ದ್ರಾ ಅ॑ಭಿತೋ ದಿ॒ಕ್ಷು ಶ್ರಿ॑ತಾ॒ ಸಹ॑ಸ್ರಶೋ ವೈ॒ಷಾಂ ಹೇ॑ಡ ಈಮಹೇ ॥ ೬ ॥ <br><br>
+
+        ಅ॒ಸೌ ಯೋ॑ऽವಸ॒ರ್ಪತಿ॑ ನೀ॒ಲಗ್ರೀ॑ವೋ ವಿ॒ಲೋಹಿ॑ತಃ । <br>
+        ಉ॒ತೈನಂ॒ ಗೋಪಾ॑ ಅದೃಶ॒ನ್ನದೃ॑ಶನ್ನುದಹಾ॒ರ್ಯಃ । <br>
+        ಉ॒ತೈನಂ॑ ವಿಶ್ವಾ॒ ಭೂತಾ॑ನಿ ಸ ದೃ॒ಷ್ಟೋ ಮೃ॑ಡಯಾತಿ ನಃ ॥ ೭ ॥ <br><br>
+
+        ನಮೋ॑ ಅಸ್ತು ನೀ॒ಲಗ್ರೀ॑ವಾಯ ಸ॒ಹಸ್ರಾ॑ಕ್ಷಾಯ ಮೀ॒ಢುಷೇ॑ । <br>
+        ಅಥೋ॑ ಯೇ ಅಸ್ಯ॒ ಸತ್ವಾ॑ನೋऽಹಂ ತೇಭ್ಯೋ॑ऽಕರಂ ನಮಃ॒ ॥ ೮ ॥ <br><br>
+
+        ಪ್ರಮುಂ॑ಚ ಧನ್ವ॒ನಸ್ತ್ವ॑ಮು॒ಭಯೋ॑ರಾರ್ತ್ನಿ॒ಯೋರ್ಜ್ಯಾಮ್ । <br>
+        ಯಾಶ್ಚ॑ ತೇ ಹ॒ಸ್ತ ಇ॑ಷವಃ ಪ॒ರಾ ತಾ॒ ಭಗ॑ವೋ ವಪ ॥ ೯ ॥ <br><br>
+
+        ಅವ॑ತತ್ಯ ಧನು॒ಸ್ತ್ವಂ॑ ಸ॒ಹಸ್ರಾ॑ಕ್ಷ ಶ॒ತೇಷು॑ಧೇ । <br>
+        ನಿ॒ಶೀರ್ಯ॑ ಶಲ್ಯಾ॒ನಾಂ ಮು॑ಖಾ ಶಿ॒ವೋ ನಃ॑ ಸು॒ಮನಾ॑ ಭವ ॥ ೧೦ ॥ <br><br>
+
+        ವಿ॒ಜ್ಯಂ ಧನುಃ॑ ಕಪ॒ರ್ದಿನೋ॒ ವಿಶ॑ಲ್ಯೋ ಬಾಣ॒ವಾಂ ಉ॑ತ । <br>
+        ಅನೇ॑ಶನ್ನಸ್ಯೇ॒ಷವ॑ ಆ॒ಭುರ॑ಸ್ಯ ನಿ॒ಷಂಗ॑ಥಿಃ ॥ ೧೧ ॥ <br><br>
+
+        ಯಾ ತೇ॒ ಹೇತಿ॑ರ್ಮೀ॒ಢುಷ್ಟ॑ಮ ಹ॒ಸ್ತೇ ಬ॑ಭೂವ ತೇ॒ ಧನುಃ॑ । <br>
+        ತಯಾ॑ ಅ॒ಸ್ಮಾನ್ ವಿಶ್ವ॑ತಸ್ತ್ವ॒ಮಯ॑ಕ್ಷ್ಮಯಾ ಪರಿ॒ಬ್ಭುಜ॑ ॥ ೧೨ ॥ <br><br>
+
+        ನಮ॑ಸ್ತೇ ಅ॒ಸ್ತ್ವಾಯು॑ಧಾಯಾ॒ನಾತ॑ತಾಯ ಧೃ॒ಷ್ಣವೇ॑ । <br>
+        ಉ॒ಭಾಭ್ಯಾ॑ಮು॒ತ ತೇ॑ ನಮೋ॒ ಬಾಹು॑ಭ್ಯಾಂ ತವ॒ ಧನ್ವ॑ನೇ ॥ ೧೩ ॥ <br><br>
     </p>
 
 
-    <!-- <h2>
-        ಶ್ರೀವೀರಭದ್ರ ಪೂಜಾವಿಧಾನ
-    </h2>
-
+    <h2>ಮಹಾಮೃತ್ಯುಂಜಯ ಮಂತ್ರ (3 times) <span class="ENG">(Mahamrityunjaya Mantra)</span></h2>
     <p>
-        ಶ್ರೀಮಂತಂ ಶರ್ವಶೀರ್ಷ ಸ್ಫುರದರುಣ ಜಟಾಸ್ಫಾಲನಾವಿರ್ಭವಂ ತಂ <br>
-        ಪ್ರಸ್ತುತ್ಯೌ ತ್ಯುಪೇತಂ ಸ್ವತನುಪುರುಮಹಸ್ಸಂವೃತಾಶಾಲ ವಕಾಶಮ್ <br>
-        ಭದ್ರಾಖ್ಯಾಂಬಾಸಮೇತಂ ಪರಶುಮುಖ ದಿವ್ಯಾಯುಧಾಂಚತ್ಕರಾಬ್ದಮ್ <br>
-        ದಕ್ಷಂ ದಕ್ಷಾಧ್ವರಘ್ನಂ ಪ್ರಮಥಪರಿವೃತಂ ಭಾವಯೇ ವೀರಭದ್ರಮ್ ॥ <br>
-        <b>
-            ಶ್ರೀಭದ್ರಾಕಾಲೀಸಹಿತ ವೀರಭದ್ರಸ್ವಾಮಿನೇನಮಃ ಧ್ಯಾನಂ ಸಮರ್ಪಯಾಮಿ | 1 |
-        </b>
+        ॐ ತ್ರ್ಯಂಬಕಂ ಯಜಾಮಹೇ ಸುಗಂಧಿಂ ಪುಷ್ಟಿವರ್ಧನಮ್ । <br>
+        ಉರ್ವಾರುಕಮಿವ ಬಂಧನಾನ್ಮೃತ್ಯೋರ್ಮುಕ್ಷೀಯ ಮಾಽಮೃತಾತ್ ॥
     </p>
 
-
+    <h2>ವೀರಭದ್ರ ಮಂತ್ರ (11 times) <span class="ENG">(Veerabhadra Mantra)</span></h2>
     <p>
-        ಶ್ರೀಭದ್ರಕಾಕ್ಯಭಿದಯಾ ಸಹಿತಂ ಸ್ವಶಕ್ಯಾ <br>
-        ಕಲ್ಯಾಣ ರತ್ನಂ ಖಚಿತಾಭರಣಾಂಚಿತಾಂಗಮ್ <br>
-        ಭಕ್ತಾವನಾದರ ಮಪಾರಕೃಪಾನಿಧಾನ <br>
-        ಮಾವಾಹಯಾಮಿ ವಿನಯಾದಿಹ ವೀರಭದ್ರಮ್ ॥ <br>
-        <b>
-            ಶ್ರೀಭದ್ರಕಾಳೀಸಹಿತ ವೀರಭದ್ರಸ್ವಾಮಿನೇನಮಃ ಆವಾಹನಂ ಸಮರ್ಪಯಾಮಿ | 2 |
-        </b>
+        ॐ ಹ್ರೀಂ ವೀರಭದ್ರಾಯ ನಮಃ
     </p>
 
+    <h2>ಶಾಂತಿ ಪಾಠ <span class="ENG">(Shanti Paata)</span></h2>
     <p>
-        ಹೈಮಂ ಮಣಿವ್ರಜಸಮಂಚಿತಪಂಚಕಂ ಭ <br>
-        ವ್ಯೋಲ್ಲಾಸ ಸಂಭರಿತ ಪಂಚಮುಖಾಸನಂ ತೇ <br>
-        ಸ್ವಾಮಿನ್ನಿ ದಂ ಪ್ರಮಥನಾಥ ಸಮರ್ಪಿತಂ ತ್ವ <br>
-        ಮಂಚತ್ಮ್ಕೃಪೋಪವಿಶ ಸಾಂಗನ ವೀರಭದ್ರ ॥ <br>
-        <b>
-            ಶ್ರೀ ಭದ್ರಕಾಳೀಸಹಿತ ವೀರಭದ್ರಸ್ವಾಮಿನೇನಮಃ ನವರತ್ನಖಚಿತ ಹೇಮಸಿಂಹಾಸನಂ ಸಮರ್ಪಯಾಮಿ | 3 |
-        </b>
+        ॐ ಶಾಂತಿಃ ಶಾಂತಿಃ ಶಾಂತಿಃ ॥
     </p>
 
-    <p>
-        ದೂರ್ವಾದಕೈಃ ಕಮಲಮುಖ್ಯಸುಮೈಶ್ಚ ವಿಷ್ಣು <br>
-        ಕಾಂತಾಭಿದೌಷಧಿವರೆಣ ಸುವಾಸಿತಾಂಬು <br>
-        ಶ್ರೀಭದ್ರಕಾಳೀಭಿಧಯಾಯುತ ಪಾದಯೋಸ್ತೇ <br>
-        ಪಾದ್ಯಂಗೃಹಾಣ ಪರಮೇಶ್ವರ ವೀರಭದ್ರಃ ॥ <br>
-        <b>
-            ಶ್ರೀ ಭದ್ರಕಾಳೀಸಹಿತ ವೀರಭದ್ರಸ್ವಾಮಿನೇನಮಃ ಪಾದಯೋಃ ಪಾದ್ಯಂ ಸಮರ್ಪಯಾಮಿ  | 4 |
-        </b>
-    </p>
-
-    <p>
-        ಸರ್ಷಪ ತಿಲ ಯವ ದೂರ್ವಾ ಸೌರಭಯುಕ್ಪೂನಗಂಧರತ್ಪಾದ್ಯಮ್‌ <br>
-        ಸಾಕ್ಷತಕುಶಾಗ್ರ ಮರ್ಹ್ಯಂ ಸ್ವೀಕುರು ಹಸ್ತೇಷು ವೀರಭದ್ರಾಣ ದ್ಯ <br>
-        <b>
-            ಶ್ರೀ ಭದ್ರಕಾಳೀಸಹಿತ ವೀರಭದ್ರಸ್ವಾಮಿನೇನಮಃ ಪಾದಯೋಃ ಪಾದ್ಯಂ ಸಮರ್ಪಯಾಮಿ | 5 |
-        </b>
-    </p>
-
-    <p>
-        ಆಚಮನಮಾಚರ ಶ್ರೀ ಭದ್ರಾಪ್ರಾಣೇಶ ವೀರಭದ್ರಾ౭ ದ್ಯ <br>
-        ಜಾತೀಲವಂಗ ತಕ್ಕೋಲಾದಿಕ ಚೂರ್ಚಾಢ್ಯ ಗಾಂಗತೋಯೇನ <br>
-        <b>
-            ಶ್ರೀ ಭದ್ರಕಾಳೀಸಹಿತ ವೀರಭದ್ರಸ್ವಾಮಿನೇನಮಃ ಮುಖೇ ಆಚಮನಂ ಸಮರ್ಪಯಾಮಿ | 6 |
-        </b>
-    </p>
-
-    <p>
-        ಮಥುದಧಿಸ್ಪರ್ಮಿಲಿತಂ ಮಧುಪರ್ಕಂದೇವ ಮಧುರಿಪುಸ್ತವ್ಯ <br>
-        ಪ್ರಧಿತಾನುಕಂಪ ಸ್ವೀಕುರು ಸುಧಿಯಾರ್ಚಿತಮದ್ಯ ಹೇಮಪಾತ್ರಸ್ಥಮ್‌ <br>
-        <b>
-            ಶ್ರೀ ಭದ್ರಕಾಳೀಸಹಿತ ವೀರಭದ್ರಸ್ವಾಮಿನೇನಮಃ ಪಂಚಾಮೃತಸ್ನಾನಂ ಸಮರ್ಪಯಾಮಿ  | 7 |
-        </b>
-    </p>
-
-    <p>
-        ಪಂಚಾಸ್ಯಜಟಾವಿರ್ಭವ ಪಂಚಾಮೃತ ಸೇಚನಂ ಪ್ರಭಾವಾಥಢ್ಯ <br>
-        ಪಂಚಶ್ರುತಿಶಕ್ಯ್ಯಾಲ ಭಿಹಿತಮಂಚತ್ಮಬ್ಬಪ ವೀರಭದ್ರ ಗೃಹ್ಣೀಷ್ವ (ಪ್ರಭೋ) <br>
-        <b>
-            ಶ್ರೀ ಭದ್ರಕಾಳೀಸಹಿತ ವೀರಭದ್ರಸ್ವಾಮಿನೇನಮಃ ಪಂಚಾಮೃತಸ್ನಾನಂ ಸಮರ್ಪಯಾಮಿ  | 8 |
-        </b>
-    </p>
-
-    <p>
-        ಗಂಗಾರ್ಮಪ್ರಭವಾ ಕಾವೇರತನಯಾ ಗೋದಾವರೀ ಕೃಷ್ಣವೇ <br>
-        ಜ್ಯೇನೋಹಂ ಪ್ರತಿಸರಸ್ವತೀ ಪ್ರಮುಖದೀವ್ಯದ್ವಾಹಿನೀಭ್ಯೋ౧ಧುನಾ <br>
-        ಪಾತೈರ್ಹೇಮಮಯೈನ್ಸಮಾಹೃತ ಸುಮಾಮೋದಾಂಚಿತಾಂಭ್ಯಕ್ಷೈ <br>
-        ಸ್ತ್ವಾಮದ್ಯಸ್ಪಪಯಾಮಿ ವೇದಮನುಭಿಶ್ರೀವೀರಭದ್ರೇಶ್ವರಾ <br>
-        <b>
-            ಶ್ರೀ ಭದ್ರಕಾಳೀಸಹಿತ ವೀರಭದ್ರಸ್ವಾಮಿನೇನಮಃ ಶುದ್ಧೋದಕ ಸ್ನಾನಂ ಸಮರ್ಪಯಾಮಿ  | 9 |
-        </b>
-    </p>
-
-    <p>
-        ಹೇಮಾಂಚಲಾಂಚದಮಲಂ ಮೃದುಲಂ ದುಕುಲ <br>
-        ಯುಗ್ಮಂ ಪ್ರಸಿದ್ಧ ಬಹುಚಿತ್ರಚಯೋಪಕ್ಷುಪ್ತಮ್ <br>
-        ಭಕ್ತಾಲ ಧುನಾಧಸಮರ್ಪಿತ ಮಾತ್ಮಪತ್ಯ್ಯಾ <br>
-        (ಪ್ರಾವಾರಯುಕ್ತ ಮುರುಭದ್ರದ ವೀರಭದ್ರಃ <br>
-        <b>
-            ಶ್ರೀ ಭದ್ರಕಾಳೀಸಹಿತ ವೀರಭದ್ರಸ್ವಾಮಿನೇನಮಃ ವಸ್ತ್ರಂ ಸಮರ್ಪಯಾಮಿ | 10 |
-        </b>
-    </p>
-
-    <p>
-        ಅಸದೃಶಸೌರಭ್ಯಯುಜಾ ಭಸಿತೇನ ಭವಾಂಬುರಾಶಿಪೋತೇನ <br>
-        ಪ್ರಸೃಮರತಿರ್ಯಗ್ರೇಖಾ ತ್ರಿಕಪುಂಡ್ರಂ ದೇವ ಭಾತು ತವ ಫಾಲೇ <br>
-        <b>
-            ಶ್ರೀ ಭದ್ರಕಾಲೀಸಹಿತ ವೀರಭದ್ರಸ್ವಾಮಿನೇನಮಃ ಭಸ್ಮಂ ಸಮರ್ಪಯಾಮಿ | 11 |
-        </b>
-    </p>
-
-    <p>
-        ಸೌವರ್ಣ ತಂತುನವಕಾಂಚಿತ ಯಜ್ಞಸೂತ್ರ <br>
-        ಮಾಧತ್ನ್ಸ್ವನವ್ಯ ಮಧುನಾಭುಜಸೀಂಬಿ ದೀರ್ಧಂ <br>
-        ಶ್ರೀವೀರಭದ್ರ ಪುರುಭದ್ರ ಭದ್ರರೋಚೀ <br>
-        ರುದ್ರಾಕ್ಷಹಾರಮವಲಂಬ ಗಳೇ ಪ್ರಲಂಬಮ್ <br>
-        <b>
-            ಶ್ರೀ ಭದ್ರಕಾಳೀಸಹಿತ ವೀರಭದ್ರಸ್ವಾಮಿನೇನಮಃ ರುದ್ರಾಕ್ಷಮಾಲಾಂ ಸಮರ್ಪಯಾಮಿ | 12 |
-        </b>
-    </p>
-
-    <p>
-        ಶ್ರೀಭದ್ರಕಾಳೀ ಪೃಧುದುಗ್ಧಗೇಹೇ <br>
-        ಪ್ರವಿಲಿ ಪ್ತಗಂಧಾಂಕಿತ ಚಾರುವಕ್ಷಃ <br>
-        ಕಸ್ತೂರಿಕಾದ್ಯಂಚಿತ ಸೌರಭಾಥಢ್ಯ <br>
-        ಮಂಗೇಷುತೇಂಲ_ ಗೀಕುರು ಭವ್ಯಗಂಧಮ್ ॥ <br>
-        <b>
-            ಶ್ರೀ ಭದ್ರಕಾಳೀಸಹಿತ ವೀರಭದ್ರಸ್ವಾಮಿನೇನಮಃ ಶ್ರೀ ಗಂಧಂ ಸಮರ್ಪಯಾಮಿ | 13 |
-        </b>
-    </p>
-
-    <p>
-        ಹಾಟಕ ಬಹುಮಣಿ ಖಚಿತಂ <br>
-        ದಾಟೀಮ್ಮಹಸಃ ಪೃಧೋರ್ವಹಸ್ತಸ್ತಮೋನಿಘ್ನಮ್ <br>
-        ನೈಟಾಲಾಕ್ಷ ಕಿರೀಟಂ ಜೂಟಲ_ ದ್ಯಾಲ. ಧತ್ಸ್ಯವೀರಭ(ರೇಶ! <br>
-        <b>
-            ಶ್ರೀ ಭದ್ರಕಾಲೀಸಹಿತ ವೀರಭದ್ರಸ್ವಾಮಿನೇನಮಃ ಶಿರಸಿ ಕಿರೀಟಮ್ ಸಮರ್ಪಯಾಮಿ | 14 |
-        </b>
-    </p>
-
-    <p>
-        ಬಹುನಿಘೃಷ್ಠಮಣಿ ಪ್ರಕರಾಥ್ಯೇ <br>
-        ವಹಭುಜಾಗ್ರತಟೇ ತಪನೀಯೇ <br>
-        ಮಹಿತದೀಪ್ತಿ ಮದಂಗದವರ್ಯೇ <br>
-        ಬೃಹದಭಿಷ್ಟುತ ರುದ್ರಸಮುದ್ಧ!॥ <br>
-        <b>
-            ಶ್ರೀ ಭದ್ರಕಾಳೀಸಹಿತ ವೀರಭದ್ರಸ್ವಾಮಿನೇನಮಃ ಅಂಗಧಧಾರಣಂ ಸಮರ್ಪಯಾಮಿ | 15 |
-        </b>
-    </p>
-
-    <p>
-        ಕರಾಂಗುಳೀಷ್ವಂಚಿತ ಹೇಮಮುದ್ರಿಕಾನ್‌ <br>
-        ಹಸ್ತ ಗ್ರಭಾಗೇಷು ಲತತ್ಸುಕಂಕಣಾನ್‌ <br>
-        ಗಳೇಸ್ಸುರದ್ರತ್ಮೃಮಯಾ(ಗ್ರಹ್ಯಹಾರಾನ್‌ <br>
-        ಧರಾಲ_ ದ್ಯಭ(ದ್ರಾನ್ವಿತ ವೀರಭದ್ರ॥ <br>
-        <b>
-            ಶ್ರೀ ಭದ್ರಕಾಳೀಸಹಿತ ವೀರಭದ್ರಸ್ವಾಮಿನೇನಮಃ ಆಭರಣಾನಿ ಸಮರ್ಪಯಾಮಿ | 16 |
-        </b>
-    </p>
-
-    <p>
-        ಆಮ್ಲಾನೈಃ ಕುಸುಮೈರಮರ್ಯ ನಗರ್ಯೋದ್ಯಾನಾನನೀಡೋದೃವೈ <br>
-        ರೃವೈಸ್ಸೌರಭಸಂಯುತೈರ್ವಿಕಸಿತೈನಸಂಗುಂಭಿತಾಮಾಲಿಕಾಃ <br>
-        ಭೂರಿಪ್ರಾಭವ ಭದ್ರಕಾಳ್ಯಭಿಧಯಾಪತ್ನ್ಯಾಯುತ ಸ್ತ್ವಂ ಪ್ರಭೋ <br>
-        ಸಾನಂದೋಧರಭೂರ್ಯಲಂಕೃತಿಕೃತೇ ಶ್ರೀವೀರಭದ್ರಾಲ ಧುನಾ ॥ <br>
-        <b>
-            ಶ್ರೀ ಭದ್ರಕಾಳೀಸಹಿತ ವೀರಭದ್ರಸ್ವಾಮಿನೇನಮಃ ನಾನಾವಿಧಸುರಭಿತಪುಷ್ಪಾಣಿ ಸಮರ್ಪಯಾಮಿ | 17 |
-        </b>
-    </p>
-
-    <p>
-        ಮಣಿಖಚಿತ ಹೇಮಕುಂಡಲ ಗುಣಭಾಸ್ವದ್ದಂಡಭಾಗಮಾಸ್ಯೇಂದುಮ್‌ <br>
-        ಮಣಿದರ್ಚಣೇಲ ವಲೋಕಯ ಗಣನೀಯಗುಣಾಗ್ರ್ಯ ವೀರಭದ್ರೇಶ!॥ <br>
-        <b>
-            ಶ್ರೀ ಭದ್ರಕಾಳೀಸಹಿತ ವೀರಭದ್ರಸ್ವಾಮಿನೇನಮಃ ಮಣಿದರ್ಪಣಂ ಸಮರ್ಪಯಾಮಿ | 18 |
-        </b>
-    </p>
-
-    <p>
-        ಬಿಲ್ಲಾಭಿಖ್ಯತರೋರ್ಬಶಾನಿ ತುಲಸೀಜಂಬೀರ ನಿರ್ಲುಂಡಿಕಾ <br>
-        ಧಾತ್ರೀಸಂಜ್ಞಕ ಭೂರುಹಾಂಚಿತಳಾನ್ಯಾಮೋದಸಾಂಗ್ರಾಣಿತೇ <br>
-        ದೀವ್ಯನ್ನ ವ್ಯಶಮಿದಳಾನಿ ವಿಮಲಾನ್ಯಾಹೃತ್ಯ ಶ್ರೀಭದ್ರಕಾ <br>
-        ಕ್ಯೃಂಬಾಸಂಯುತ ವೀರಭದ್ರ ಪದಪಾದ್ಮಲ_ ರ್ಚಾಂಕಂಹಂಪ್ರಭೂಂ ॥ <br>
-        <b>
-            ಶ್ರೀ ಭದ್ರಕಾಳೀಸಹಿತ ವೀರಭದ್ರಸ್ವಾಮಿನೇನಮಃ ಬಿಲ್ವತುಲಸೀದಳಾನಿ ಸಮರ್ಪಯಾಮಿ | 19 |
-        </b>
-    </p>
-
-    <p>
-        ಅಂಭೋಜಾತನಿಕಾಯ ಕಲ್ಚಕುಸುಮಾನೀಕಸ್ನುರನ್ಮಲ್ಲಿಕಾ <br>
-        ಮಂದಾರದ್ರುಸುಮೌಘಚಂಪಕ ಲತಾಂತಾರ್ಕಪ್ರಸೂನಪ್ರಜೈಃ <br>
-        ಜಾಜೀ ಕೇತಕಿ ಮಾಲತೀಕುಕಳಸಚ್ಚಾಮಂತಿಕಾ ಕೋವಿದಾ <br>
-        <b>
-            ಶ್ರೀ ಭದ್ರಕಾಳೀಸಹಿತ ವೀರಭದ್ರಸ್ವಾಮಿನೇನಮಃ ವಿವಿಧ ಪ್ರಸೂನಾನಾ ಸಮರ್ಪಯಾಮಿ | 20 |
-        </b>
-    </p>
-
-    <p>
-        ಭವ್ಯೈಸ್ಸೌರಭಸಂಯುತೈಸ್ಸಗುರುಗೋ ಸರ್ಪಿರ್ಮಧುಸ್ವಚ್ಚಕ <br>
-        ಚ್ಫೂರಾಂಚದ್ದನಸಾರಗುಗ್ಗುಕುಮಿಳಲ್ಲಾಕ್ಷಾರ್ಹ ಸಾಂಬ್ರಾಣಿಕಾ <br>
-        ಕರ್ಪೂರಾದಿ ಮನಸ್ಪತಿಪ್ರಭವ ಸದ್ವಸ್ವಾಘಚರ್ಣೈಃ ಪ್ರಭೋ <br>
-        ದೂಪಂ ತೇ ಪರಿಕಲ್ಪಯಾಮಿ ವರದ ಶ್ರೀ ವೀರಭದ್ರೇಶ್ವರಾ <br>
-        <b>
-            ಶ್ರೀ ಭದ್ರಕಾಳೀಸಹಿತ ವೀರಭದ್ರಸ್ವಾಮಿನೇನಮಃ ಧೂಪಮಾಪಘ್ರುಪಯಾಮಿ | 21 |
-        </b>
-    </p>
-
-    <p>
-        ಅಜ್ಞಾನೋರುತಮೋ౭ ಪಹ ಪ್ರಥಿತಸುಜ್ಞಾನ ಪ್ರಕಾಶಪ್ರದ <br>
-        ಸ್ವಾಮಿನ್‌ ಸಾಂಗನ ವೀರಭದ್ರ ವರದ ಪಸ್ಫೂರ್ತಿ ಮಸ್ತೇ ಪುರಃ <br>
-        ಗವ್ಯಾಜ್ಯಾಲ ಕಸ್ತುವರ್ತಿಭಿಃ ಕನಕಪಾತ್ರಾಂತಸ್ಥಿತೈರ್ಟೀಪಮಾ <br>
-        ಲಾಜಾಲಂ ತ್ವಧುನಾರ್ಚಯಾಮಿ ಭ್ರಯಯನ್ರ್ರಹ್ಮಃ ಕೃಪಾಳೋ౭ ಮಮಾಮ್‌ <br>
-        <b>
-            ಶ್ರೀ ಭದ್ರಕಾಲೀಸಹಿತ ವೀರಭದ್ರಸ್ವಾಮಿನೇನಮಃ ದೀಪಂದರ್ಶ್ಯಯಾಮಿ | 22 |
-        </b>
-    </p>
-
-    <p>
-        ಗೋಭವ್ಯಾಜ್ಯ ಸುಪಾಚಿತೈರ್ಭಹುವಿಧೈರ್ಭಕ್ಷ್ಯೈಶ್ಚ ಪಕ್ವಾನ್ನಸಂ <br>
-        ಭೇದೈಸ್ಸ್ವಾದುಭಿರರ್ಹಭೋಜ್ಯನಿಚಯೈಶ್ಸೋ ಷ್ರೇಶ್ಚ ಲೇ ಹ್ಯೋರ್ಯುತಮ್‌ <br>
-        ರಾಜಾನ್ನಂ ಮಣಿಹೇಮಪಾತ್ರನಿಹಿತಂ ಕ್ಷಿರಾನ್ನಮಪ್ಯಾವ್ಯಧ <br>
-        ಧನ್ವೀತಂ ಭವತೇ ನಿವೇದಿತಮಿದಂ ಸ್ವಾಮಿನ್‌ ಸ್ವಕೆರ್ಫುಜ್ಯತಾಮ್‌  | 23 | <br> <br>
-
-        ಇದಮದ್ಯತ್ಸದ್ಯೋಘೃತಮೇತ ದ್ಲೋದುಗ್ಧಮಾತ್ಯನೋ ಮಧುರಮ್‌ <br>
-        ಪೀಯೂಷರುಚಿಪಯ ಸ್ತ್ವಿದಮಾದರತೋ ದೇವ ಪೀಯತಾಮಸಕೃತ್‌  | 24 | <br> <br>
-
-        ಹಸ್ತಮುಖಪಾದಕಮಲಾ ನ್ಯುಪ್ಟಾಂಬುಭಿರೀಶ್ವರೋದ್ದ ಸಂಪ್ರಕ್ಷಾಳ್ಯ <br>
-        ಪಾತ್ರೇ ಸೌವರ್ಣೇಲ. ಸ್ಮಿ ನಾಚಮನಂ ಚ ಕುರು ವೀರಭದ್ರಾಲ_ ದ್ಯ!  | 25 | <br> <br>
-
-        ಮಾಧುರ್ಯವದ್ರುಚಿರಪಕ್ವಫಲಾನಿ ನಾನಾ <br>
-        ಜಾತ್ಯುದೃವಾನಿ ಕಡಳೀಮುಖರಾಣಿ ಭಕ್ತ್ಯಾ <br>
-        ಸಂಗ್ಬೃಹ್ಯ ದೇವ ಪುರತೋಲ_ ದ್ಯ ಮಯಾರ್ಪಿತಾನಿ <br>
-        ಶ್ರೀ ವೀರಭದ್ರ ಕೃಪಯಾ ಪರಿಗ್ಭಹ್ಯ ಭುಂಕ್ಷ್ಯವ॥ <br>
-        <b>
-            ಶ್ರೀ ಭದ್ರಕಾಳೀಸಹಿತ ವೀರಭದ್ರಸ್ವಾಮಿನೇನಮಃ ಅಮೃತನಿವೇದನಂ ಸಮರ್ಪಯಾಮಿ | 26 |
-        </b>
-    </p>
-
-    <p>
-        ಏಲಾಲವಂಗ ಪರಪೂಗಕ ಜಾತಿಪತ್ರ <br>
-        ಕರ್ಪೂರ ಖಾದಿರ ಮುಖಾಂಚಿತ ಗಂಧಯುಕೈಃ <br>
-        ಸದ್ವಸ್ತುಭಿಸ್ಸಹ ಮೌಕ್ತಿಕಚೂರ್ಣ ರಾಜ <br>
-        ತ್ರ್ತಾಂಬೂಲಮದ್ಯ ಪರಮೇಶ್ವರತೇಳಣ_ ರ್ಪಯಾಮಿ <br>
-        <b>
-            ಶ್ರೀ ಭದ್ರಕಾಳೀಸಹಿತ ವೀರಭದ್ರಸ್ವಾಮಿನೇನಮಃ ತಾಂಬೂಲಂ ಸಮರ್ಪಯಾಮಿ | 27 |
-        </b>
-    </p>
-
-    <p>
-        ಸಕಲಮಣಿನಿಕಾಯ ಪ್ರಸ್ಫುರದ್ದೇಮಪಾತ್ರ <br>
-        ಪ್ರಕಟರುಚಿರ ಕರ್ಪೂರೋಜ್ಞ್ವಲದ್ದೀಪ ಪಂಜ್ಯಾ <br>
-        ಜಯವಚನಸಮೇತಂ (ಶ್ರೌತವಾಗ್ಸಿ ಸ್ತುವಂಸ್ವ್ವಾಂ <br>
-        ವರದ ವಿಮಲಭಕ್ಯಾ ಭದ್ರ ನೀರಾಜಯಾಮಿ ॥ <br>
-        <b>
-            ಶ್ರೀ ಭದ್ರಕಾಲೀಸಹಿತ ವೀರಭದ್ರಸ್ವಾಮಿನೇನಮಃ ಕರ್ಪೂರನೀರಾಜನಂ ಸಮರ್ಪಯಾಮಿ | 28 |
-        </b>
-    </p>
-
-    <p>
-        ಸರ್ವಾಮರ್ತ್ಯ ನಿಕಾಯಸಂಸ್ತುತಗುಣ ಪ್ರಸ್ಫೂರ್ತಿಮನ್‌ ಭದಥ್ರಕಾ <br>
-        ಕ್ಯಂಬಾಸಂಯುತ ವೀರಭದ್ರ ಶೃತಿಶೀರ್ಮೋಕ್ತೀ ರ್ವದನೃಕ್ತಿತಃ <br>
-        ಶುದ್ಧಾಂತಃಕರಣೇನ ಹೇಮಮಣಿಯುಕ್ಫುಷ್ಪಾಂಜಲಿಂ ತೇಪದಾಂ <br>
-        ಭೋಜಾತದ್ವಿತಯಾಂತಿಕೇ ವಿನಿದಧೇ ಕಾರುಣ್ಯವಾರಾಣ್ಣಿ ಧೇ ॥ <br>
-        <b>
-            ಶ್ರೀ ಭದ್ರಕಾಳೀಸಹಿತ ವೀರಭದ್ರಸ್ವಾಮಿನೇನಮಃ ಪುಷ್ಪಾಂಜಲಿಂ ಸಮರ್ಪಯಾಮಿ | 29 |
-        </b>
-    </p>
-
-    <p>
-        ದುರಿತನಿಚಯತಾವತ್ಪಾದವಕಾಬ್ದಂ <br>
-        ಪರಮಶುಭ ಸಮೂಹದಾಯಕಂ ತೇ <br>
-        ಚರಣ ಸರಸಿಜಾತ ವಂದನಂ ಮೇ <br>
-        ವಿತರುತುಶಿಮವಾಶು ವೀರಭದ್ರ ॥ <br>
-        <b>
-            ಶ್ರೀ ಭದ್ರಕಾಳೀಸಹಿತ ವೀರಭದ್ರಸ್ವಾಮಿನೇನಮಃ ಪ್ರದಕ್ಷಿಣಂ ಸಮರ್ಪಯಾಮಿ | 30 |
-        </b>
-    </p>
-
-    <p>
-        ಸಾಷ್ಟಾಂಗಂ ಪ್ರಣಿಪತ್ಯತೇ ಪದಯುಗೇ ಸರ್ವಾಲ ಪರಾಧಮೇ <br>
-        ತ್ವೇವಂ ದಕ್ಷಮುಖಾಸ್ಸಮಸ್ತ ದಿವಿಷದ್ವರ್ಯಾಸ್ತುವಂತೋಂತರೇ <br>
-        ನಿರ್ವಾಜಾಮಲಭಕ್ತಿತಃ ವುರುಕೃಪಾ ಪೂರ್ಣಕ್ಷಣಾಲೋಕಿತಾ <br>
-        ಶೃರ್ಮಾಲ ವಾಪುರಹೋಮಮಹೇಶ ಪ್ರಣುತಂ ಮಾಂ ವೀರಭದ್ರಾಣ ವತಾತ್‌ | 31 | <br> <br>
-
-        (ಪ್ರಾಲಂಬಿಮುಕ್ತಾಫಲಜಾಲರಮ್ಯಂ ಸೌವರ್ಣದಂಡೇನ ವಿರಾಜಮಾನಮ್‌ <br>
-        ಮಣ್ಯುಲ್ಲ ಸತ್ಕಾಂಚನತುಂಗಶಂಗಂ ಛತ್ರಂ ಸಿತಂ ಸ್ವೀಕುರು ವೀರಭದ್ರ <br>
-        <b>
-            ಶ್ರೀ ಭದ್ರಕಾಳೀಸಹಿತ ವೀರಭದ್ರಸ್ವಾಮಿನೇನಮಃ ಛತ್ರಂ ಸಮರ್ಪಯಾಮಿ | 32 | <br>
-        </b>
-    </p>
-
-    <p>
-        ಚಮರೀಮೃಗವಾಲಾಲ ಹೃತ ಮೃದುಲೋಮಸ್ತೋಮವಿಸ್ಫುರದ್ದಂಡಮ್‌ <br>
-        ಯುಗಮಿಮನೇನತೇ ಪಾರ್ಕ್ಕಯುಗೇ ಸಂವೀಜಯೇ ಪ್ರಭೋ ಭಕ್ತ್ಯಾ!  | 33 | <br> <br>
-
-        ಚಮರೀಮೃಗವಾಲಾ ౨ ಹೃತ ಮೃದುಲೋಮಸ್ತೋಮವಿಸ್ಫುರದ್ದಂಡಮ್‌ <br>
-        ಯುಗಮಿಮನೇನತೇ ಪಾರ್ಕ್ಕಯುಗೇ ಸಂವೀಜಯೇ ಪ್ರಭೋ ಭಕ್ತ್ಯಾ! <br>
-        <b>
-            ಶ್ರೀ ಭದ್ರಕಾಲೀಸಹಿತ ವೀರಭದ್ರಸ್ವಾಮಿನೇನಮಃ ಚಾಮರಂ ವೀಜಯಾಯಿ | 34 |
-        </b>
-    </p>
-
- -->
-
-
-
-    <h2>
-        ಶ್ರೀವೀರಭದ್ರ ಪೂಜಾವಿಧಾನ
-    </h2>
-
-    <p>
-        ಭವ್ಯೈಸ್ಸೌರಭಸಂಯುತೈಸ್ಸಗುರುಗೋ ಸರ್ಪಿರ್ಮಧುಸ್ವಚ್ಚಕ <br>
-        ಚ್ಫೂರಾಂಚದ್ದನಸಾರಗುಗ್ಗುಕುಮಿಳಲ್ಲಾಕ್ಷಾರ್ಹ ಸಾಂಬ್ರಾಣಿಕಾ <br>
-        ಕರ್ಪೂರಾದಿ ಮನಸ್ಪತಿಪ್ರಭವ ಸದ್ವಸ್ವಾಘಚರ್ಣೈಃ ಪ್ರಭೋ <br>
-        ದೂಪಂ ತೇ ಪರಿಕಲ್ಪಯಾಮಿ ವರದ ಶ್ರೀ ವೀರಭದ್ರೇಶ್ವರಾ <br>
-        <b>ಶ್ರೀ ಭದ್ರಕಾಳೀಸಹಿತ ವೀರಭದ್ರಸ್ವಾಮಿನೇನಮಃ ಧೂಪಮಾಪಘ್ರುಪಯಾಮಿ ||</b>
-    </p>
-
-    <p>
-        ಅಜ್ಞಾನೋರುತಮೋ౭ ಪಹ ಪ್ರಥಿತಸುಜ್ಞಾನ ಪ್ರಕಾಶಪ್ರದ <br>
-        ಸ್ವಾಮಿನ್‌ ಸಾಂಗನ ವೀರಭದ್ರ ವರದ ಪಸ್ಫೂರ್ತಿ ಮಸ್ತೇ ಪುರಃ <br>
-        ಗವ್ಯಾಜ್ಯಾಲ ಕಸ್ತುವರ್ತಿಭಿಃ ಕನಕಪಾತ್ರಾಂತಸ್ಥಿತೈರ್ಟೀಪಮಾ <br>
-        ಲಾಜಾಲಂ ತ್ವಧುನಾರ್ಚಯಾಮಿ ಭ್ರಯಯನ್ರ್ರಹ್ಮಃ ಕೃಪಾಳೋ౭ ಮಮಾಮ್‌ <br>
-        <b>ಶ್ರೀ ಭದ್ರಕಾಲೀಸಹಿತ ವೀರಭದ್ರಸ್ವಾಮಿನೇನಮಃ ದೀಪಂದರ್ಶ್ಯಯಾಮಿ ||</b>
-    </p>
-
-    <p>
-        ಗೋಭವ್ಯಾಜ್ಯ ಸುಪಾಚಿತೈರ್ಭಹುವಿಧೈರ್ಭಕ್ಷ್ಯೈಶ್ಚ ಪಕ್ವಾನ್ನಸಂ <br>
-        ಭೇದೈಸ್ಸ್ವಾದುಭಿರರ್ಹಭೋಜ್ಯನಿಚಯೈಶ್ಸೋ ಷ್ರೇಶ್ಚ ಲೇ ಹ್ಯೋರ್ಯುತಮ್‌ <br>
-        ರಾಜಾನ್ನಂ ಮಣಿಹೇಮಪಾತ್ರನಿಹಿತಂ ಕ್ಷಿರಾನ್ನಮಪ್ಯಾವ್ಯಧ <br>
-        ಧನ್ವೀತಂ ಭವತೇ ನಿವೇದಿತಮಿದಂ ಸ್ವಾಮಿನ್‌ ಸ್ವಕೆರ್ಫುಜ್ಯತಾಮ್‌  || <br> <br>
-
-        ಇದಮದ್ಯತ್ಸದ್ಯೋಘೃತಮೇತ ದ್ಲೋದುಗ್ಧಮಾತ್ಯನೋ ಮಧುರಮ್‌ <br>
-        ಪೀಯೂಷರುಚಿಪಯ ಸ್ತ್ವಿದಮಾದರತೋ ದೇವ ಪೀಯತಾಮಸಕೃತ್‌  || <br> <br>
-
-        ಹಸ್ತಮುಖಪಾದಕಮಲಾ ನ್ಯುಪ್ಟಾಂಬುಭಿರೀಶ್ವರೋದ್ದ ಸಂಪ್ರಕ್ಷಾಳ್ಯ <br>
-        ಪಾತ್ರೇ ಸೌವರ್ಣೇಲ. ಸ್ಮಿ ನಾಚಮನಂ ಚ ಕುರು ವೀರಭದ್ರಾಲ_ ದ್ಯ!  || <br> <br>
-
-        ಮಾಧುರ್ಯವದ್ರುಚಿರಪಕ್ವಫಲಾನಿ ನಾನಾ <br>
-        ಜಾತ್ಯುದೃವಾನಿ ಕಡಳೀಮುಖರಾಣಿ ಭಕ್ತ್ಯಾ <br>
-        ಸಂಗ್ಬೃಹ್ಯ ದೇವ ಪುರತೋಲ_ ದ್ಯ ಮಯಾರ್ಪಿತಾನಿ <br>
-        ಶ್ರೀ ವೀರಭದ್ರ ಕೃಪಯಾ ಪರಿಗ್ಭಹ್ಯ ಭುಂಕ್ಷ್ಯವ॥ <br>
-        <b>ಶ್ರೀ ಭದ್ರಕಾಳೀಸಹಿತ ವೀರಭದ್ರಸ್ವಾಮಿನೇನಮಃ ಅಮೃತನಿವೇದನಂ ಸಮರ್ಪಯಾಮಿ ||</b>
-    </p>
-
-    <p>
-        ಸಕಲಮಣಿನಿಕಾಯ ಪ್ರಸ್ಫುರದ್ದೇಮಪಾತ್ರ <br>
-        ಪ್ರಕಟರುಚಿರ ಕರ್ಪೂರೋಜ್ಞ್ವಲದ್ದೀಪ ಪಂಜ್ಯಾ <br>
-        ಜಯವಚನಸಮೇತಂ (ಶ್ರೌತವಾಗ್ಸಿ ಸ್ತುವಂಸ್ವ್ವಾಂ <br>
-        ವರದ ವಿಮಲಭಕ್ಯಾ ಭದ್ರ ನೀರಾಜಯಾಮಿ ॥ <br>
-        <b>ಶ್ರೀ ಭದ್ರಕಾಲೀಸಹಿತ ವೀರಭದ್ರಸ್ವಾಮಿನೇನಮಃ ಕರ್ಪೂರನೀರಾಜನಂ ಸಮರ್ಪಯಾಮಿ ||</b>
-    </p>
-
-    <div id="chaamaram"></div>
-
-    <div id="puja-end-prarthana"></div>
-    <b>
-        ಮಂತ್ರಹೀನಂ ಕ್ರಿಯಾಹೀನಂ ಭಕ್ತಿಹೀನಂ <u>ವೀರಭದ್ರ</u> | <br>
-        <span class="ENG">
-            mantrahInaṃ kriyAhInaṃ bhaktihInaṃ <u>Veerabhadra</u> |<br>
-        </span>
-
-        ಯತ್ಪೂಜಿತಂ ಮಯಾ <u>ದೇವ</u> ಪರಿಪೂರ್ಣಂ ತದಸ್ತು ತೇ |<br>
-        <span class="ENG">
-            yatpUjitaṃ mayA <u>Deva</u> paripUrṇaṃ tadastu tE |<br>
-        </span>
-
-        ಅನಯಾ ಯಥಾಶಕ್ತಿ ಪೂಜಯಾ ಚ <u>ಭಗವಾನ್</u> <u>ಸರ್ವಾತ್ಮಕಃ</u> |<br>
-        <span class="ENG">
-            AnayA yathAshakti pUjayA cha <u>bhagavaan</u> <u>sarvaatmaka:</u> |<br>
-        </span>
-
-        ಶ್ರೀ <u>ಭದ್ರಕಾಲೀಸಹಿತ ವೀರಭದ್ರಸ್ವಾಮಿ</u> ದೇವತಾ ಸುಪ್ರಸನ್ನಃ ಸುಪ್ರೀತೋ ವರದೋ ಭವತು ||<br>
-        <span class="ENG">
-            Śrī <u>Bhadrakali sahita Veerabhadraswamy</u> devatA suprasannaH suprEtO varadO bhavatu || <br>
-        </span>
-    </b>
-
-    <div id="swasti"></div>
 
     <!-- Centralized Scripts -->
     <script src="../scripts/common.js"></script>
 </body>
+
 </html>
