--- a/stotram/stotram-template.html
+++ b/stotram/stotram-template.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TEMPLATE_TITLE_LANG (TEMPLATE_TITLE_ENG)</title>
     <link rel="icon" type="image/x-icon" href="../favicon.ico">
-    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanskannada.css">
     <!-- Centralized Styles -->
     <link rel="stylesheet" href="../styles/common.css">
 </head>
