--- a/stotram/sri-suktam.html
+++ b/stotram/sri-suktam.html
@@ -15,23 +15,6 @@
 
 <body>
 
-
-    ಶ
-
-ಷ
-
-ಸ
-
-ಹ
-
-ಳ
-
-ೞ
-
-ಽ
-
-
-
     <h1>ಶ್ರೀ ಸೂಕ್ತಂ (Sri Suktam)</h1>
 
     <strong>Śrī Sūktam (Rigvedic Khila, Taittiriya Recitation)</strong><br><br>
@@ -111,6 +94,20 @@
     ತಾಂ ಮ॒ ಆವ॑ಹ॒ ಜಾತ॑ವೇದೋ ಲ॒ಕ್ಷ್ಮೀಮನ॑ಪಗಾ॒ಮಿನೀ᳚ಮ್ | <br><br>
 
     ಯಸ್ಯಾಂ॒ ಹಿರ॑ಣ್ಯಂ॒ ಪ್ರಭೂ॑ತಂ॒ ಗಾವೋ॑ ದಾ॒ಸ್ಯೋಽಶ್ವಾ᳚ನ್ ವಿ॒ನ್ದೇಯಂ॒ ಪುರು॑ಷಾನ॒ಹಮ್ || ೧೫ || <br><br><br>
+
+
+    ಓಂ ಮ॒ಹಾ॒ದೇ॒ವ್ಯೈ ಚ॑ ವಿ॒ದ್ಮಹೇ॑ ವಿಷ್ಣುಪ॒ತ್ನ್ಯೈ ಚ॑ ಧೀಮಹಿ | <br><br>
+
+    ತನ್ನೋ॑ ಲಕ್ಷ್ಮೀಃ ಪ್ರಚೋ॒ದಯಾ᳚ತ್ || ೧೯ || <br><br><br>
+
+    Youtube - better svaras
+    <iframe width="500" height="100" src="https://www.youtube.com/embed/9nlK7KkGT74?si=4jPS6ewMnr91ipiz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe><br><br>
+
+    Youtube - 2 levels of svaras
+    <iframe width="500" height="100" src="https://www.youtube.com/embed/ThznwYxJ8po?si=ynmT866C_B_aUPxm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe><br><br>
+
+    Youtube - analysis
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/rWMhePsG2jI?si=GQCsAxIg1LKYfB4H&amp;start=41" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe><br><br>
 
 </body>
 
