--- a/stotram/sri-suktam.html
+++ b/stotram/sri-suktam.html
@@ -100,14 +100,14 @@
 
     ತನ್ನೋ॑ ಲಕ್ಷ್ಮೀಃ ಪ್ರಚೋ॒ದಯಾ᳚ತ್ || ೧೯ || <br><br><br>
 
-    Youtube - better svaras
+    Youtube - better svaras <br>
     <iframe width="500" height="100" src="https://www.youtube.com/embed/9nlK7KkGT74?si=4jPS6ewMnr91ipiz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe><br><br>
 
-    Youtube - 2 levels of svaras
+    Youtube - 2 levels of svaras <br>
     <iframe width="500" height="100" src="https://www.youtube.com/embed/ThznwYxJ8po?si=ynmT866C_B_aUPxm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe><br><br>
 
-    Youtube - analysis
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/rWMhePsG2jI?si=GQCsAxIg1LKYfB4H&amp;start=41" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe><br><br>
+    Youtube - analysis <br>
+    <iframe width="500" height="100" src="https://www.youtube.com/embed/rWMhePsG2jI?si=GQCsAxIg1LKYfB4H&amp;start=41" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe><br><br>
 
 </body>
 
