--- a/stotram/kanakadhara-stotram.html
+++ b/stotram/kanakadhara-stotram.html
@@ -19,7 +19,9 @@
 
     Sequence recommended by Nanduri Sambasiva Rao.<br>
 
-    NOTE: Pending.. extract OCR telugu text from Nanduri translate to Kannada and compare. We have found many discrepancies in Nanduri Kannada text, in particular the phala shruti section (which is not mentioned else where). <br>
+    NOTE: Pending.. extract OCR telugu text from Nanduri translate to Kannada and compare. We have found many
+    discrepancies in Nanduri Kannada text, in particular the phala shruti section (which is not mentioned else where).
+    <br>
 
     NOTE: Pending.. add reason for resequencing the stotram.
 
@@ -63,7 +65,11 @@
         धनिकद्वारनिवासदुःखदोग्ध्रीम्॥ २१॥ <br> -->
     </p>
 
-    <h3>ಗಣಪತಿ ಪ್ರಾರ್ಥನ (Ganapati Prarthana)</h3>
+    <h3>ವಿನಾಯಕ ಸ್ತುತಿ - (Vinayaka Stuti)</h3>
+
+    We must recite this vinayaka stuti before starting the kanakadhara stotram.
+    When you receive blessings of goddess, this stuti ensures full benefits without any obstacles.
+
     <p>
         ವಂದೇ ವಂದಾರು ಮಂದಾರಮಿಂದಿರಾನಂದ ಕಂದಲಂ <br>
         ಅಮಂದಾನಂದ ಸಂದೋಹ ಬಂಧುರಂ ಸಿಂಧುರಾನನಂ <br>
@@ -72,13 +78,9 @@
             vande vandāru mandāram indirā-ānanda kandhalam <br>
             amanda-ānanda sandoha bandhuram sindhura-ānanam <br>
 
-            I bow to -- devotees -- celestial tree -- Joy of Indira (Lakshmi) -- source of happiness <br>
-            Immense bliss -- mass/collection -- beautiful -- one with vermilion face (Ganesha) <br>
-
-            I bow to Lord Ganesha, whose face shines like vermilion, <br>
-            who is like the heavenly Mandāra tree to His devotees, <br>
-            the very source of joy for Goddess Lakshmi herself, <br>
-            and who is adorned with an abundance of immense bliss and beauty. <br>
+            You are like the kalpa vriksa for the wealthy,
+            you are the one who bring happiness to Lakshmi's eyes,
+            you are like a muddha/blob of happiness, we bow to you.
         </span>
 
         <!-- वन्दे वन्दारु मन्दारमिन्दिरानन्द कन्दलं <br>
@@ -106,13 +108,13 @@
         लोकधिनाथ गृहिणीममृताब्धिपुत्रीं ॥ <br> -->
     </p>
 
-    <h3>ಕನಕಧಾರಾ ಸ್ತೋತ್ರ (Kanakadhara Stotra)</h3>
+    <h3>ಕನಕಧಾರಾ ಸ್ತೋತ್ರ - (Kanakadhara Stotra Part I - 7 shlokas)</h3>
 
     <p>
         ಅಂಗಂ ಹರೇಃ ಪುಲಕಭೂಷಣಮಾಶ್ರಯಂತೀ <br>
         ಭೃಂಗಾಂಗನೇವ ಮುಕುಳಾಭರಣಂ ತಮಾಲಂ । <br>
         ಅಂಗೀಕೃತಾಖಿಲ ವಿಭೂತಿರಪಾಂಗಲೀಲಾ <br>
-        ಮಾಂಗಲ್ಯದಾಸ್ತು ಮಮ ಮಂಗಳದೇವತಾಯಾಃ ॥ <br>
+        ಮಾಂಗಲ್ಯದಾಸ್ತು ಮಮ ಮಂಗಳದೇವತಾಯಾಃ ॥ 1 ॥ <br>
 
         <span class="ENG">
             aMgaM harēh pulakabhūṣaṇamāśrayantī <br>
@@ -131,7 +133,7 @@
         ಮುಗ್ಧಾ ಮುಹುರ್ವಿದಧತೀ ವದನೇ ಮುರಾರೇಃ <br>
         ಪ್ರೇಮತ್ರಪಾಪ್ರಣಿಹಿತಾನಿ ಗತಾಗತಾನಿ । <br>
         ಮಾಲಾದೃಶೋರ್ಮಧುಕರೀವ ಮಹೋತ್ಪಲೇ ಯಾ <br>
-        ಸಾ ಮೇ ಶ್ರಿಯಂ ದಿಶತು ಸಾಗರ ಸಂಭವಾ ಯಾಃ ॥ <br>
+        ಸಾ ಮೇ ಶ್ರಿಯಂ ದಿಶತು ಸಾಗರ ಸಂಭವಾ ಯಾಃ ॥ 2 ॥ <br>
 
         <span class="ENG">
             mugdhaa muhurvidadhatee vadanae muraarae: <br>
@@ -150,7 +152,7 @@
         ವಿಶ್ವಾಮರೇಂದ್ರ ಪದ ವಿಭ್ರಮ ದಾನದಕ್ಷಂ <br>
         ಆನಂದಹೇತುರಧಿಕಂ ಮುರವಿದ್ವಿಷೋಽಪಿ । <br>
         ಈಷನ್ನಿಷೀದತು ಮಯಿ ಕ್ಷಣಮೀಕ್ಷಣಾರ್ಥಂ <br>
-        ಇಂದೀವರೋದರ ಸಹೋದರಮಿಂದಿರಾ ಯಾಃ ॥ <br>
+        ಇಂದೀವರೋದರ ಸಹೋದರಮಿಂದಿರಾ ಯಾಃ ॥ 3 ॥ <br>
 
         <span class="ENG">
             viSvaamaraeMdra-padavibhrama-daana-dakshaM <br>
@@ -170,7 +172,7 @@
         ಆಮೀಲಿತಾಕ್ಷಮಧಿಗ್ಯಮ ಮುದಾ ಮುಕುಂದಂ <br>
         ಆನಂದಕಂದಮನಿಮೇಷಮನಂಗ ತಂತ್ರಂ । <br>
         ಆಕೇಕರಸ್ಥಿತಕನೀನಿಕಪಕ್ಷ್ಮನೇತ್ರಂ <br>
-        ಭೂತ್ಯೈ ಭವನ್ಮಮ ಭುಜಂಗ ಶಯಾಂಗನಾ ಯಾಃ ॥ <br>
+        ಭೂತ್ಯೈ ಭವನ್ಮಮ ಭುಜಂಗ ಶಯಾಂಗನಾ ಯಾಃ ॥ 4 ॥ <br>
 
         <span class="ENG">
             aameelitaaksha madhigamya mudaa mukuMdaM <br>
@@ -189,7 +191,7 @@
         ಕಾಲಾಂಬುದಾಳಿ ಲಲಿತೋರಸಿ ಕೈಟಭಾರೇಃ <br>
         ಧಾರಾಧರೇ ಸ್ಫುರತಿ ಯಾ ತಟಿದಂಗನೇವ । <br>
         ಮಾತುಸ್ಸಮಸ್ತಜಗತಾಂ ಮಹನೀಯಮೂರ್ತಿಃ <br>
-        ಭದ್ರಾಣಿ ಮೇ ದಿಶತು ಭಾರ್ಗವನಂದನಾ ಯಾಃ ॥ <br>
+        ಭದ್ರಾಣಿ ಮೇ ದಿಶತು ಭಾರ್ಗವನಂದನಾ ಯಾಃ ॥ 5 ॥ <br>
 
         <span class="ENG">
             kaalaaMbudaali-lalitOrasi kaiTabhaarae: <br>
@@ -208,7 +210,7 @@
         ಬಾಹ್ವಂತರೇ ಮಧುಜಿತಃ ಶ್ರಿತಕೌಸ್ತುಭೇ ಯಾ <br>
         ಹಾರಾವಳೀವ ಹರಿನೀಲಮಯೀ ವಿಭಾತಿ । <br>
         ಕಾಮಪ್ರದಾ ಭಗವತೋಽಪಿ ಕಟಾಕ್ಷಮಾಲಾ <br>
-        ಕಳ್ಯಾಣಮಾವಹತು ಮೇ ಕಮಲಾಲಯಾ ಯಾಃ ॥ <br>
+        ಕಳ್ಯಾಣಮಾವಹತು ಮೇ ಕಮಲಾಲಯಾ ಯಾಃ ॥ 6 ॥ <br>
 
         <span class="ENG">
             baahvaMtarae murajita: Srithakaustubhae yaa <br>
@@ -223,11 +225,16 @@
         कळ्याणमावहतु मे कमलालयायाः ॥ ५॥ <br> -->
     </p>
 
+
+    This is like the title for kanakadhara stotram.
+    For this shloka alone, bring hands together, pleading to the goddess.
+    If you have financial issue, do plead with tears washing her feet.
+
     <p>
         ಪ್ರಾಪ್ತಂ ಪದಂ ಪ್ರಥಮತಃ ಖಲು ಯತ್ಪ್ರಭಾವಾತ್ <br>
         ಮಾಂಗಲ್ಯಭಾಜಿ ಮಧುಮಾಥಿನಿ ಮನ್ಮಥೇನ । <br>
         ಮಯ್ಯಾಪತೇತ್ತದಿಹ ಮಂಥರಮೀಕ್ಷಣಾರ್ಥಂ <br>
-        ಮಂದಾಲಸಂ ಚ ಮಕರಾಲಯ ಕನ್ಯಕಾ ಯಾಃ ॥ <br>
+        ಮಂದಾಲಸಂ ಚ ಮಕರಾಲಯ ಕನ್ಯಕಾ ಯಾಃ ॥ 7 ॥ <br>
 
         <span class="ENG">
             praaptaM padaM prathamata: khalu yatprabhaavaat <br>
@@ -242,11 +249,13 @@
         मन्दालसं च मकरालयकन्यकायाः ॥ ७॥ <br> -->
     </p>
 
+    <h3>ಕನಕಧಾರಾ ಸ್ತೋತ್ರ - (Kanakadhara Stotra Part II - 3 shlokas)</h3>
+
     <p>
         ದದ್ಯಾದ್ದಯಾನು ಪವನೋ ದ್ರವಿಣಾಂಬುಧಾರಾಂ <br>
         ಅಸ್ಮಿನ್ನಕಿಂಚನ ವಿಹಂಗ ಶಿಶೌ ವಿಷಣ್ಣೇ । <br>
         ದುಷ್ಕರ್ಮಘರ್ಮಮಪನೀಯ ಚಿರಾಯ ದೂರಂ <br>
-        ನಾರಾಯಣ ಪ್ರಣಯಿನೀ ನಯನಾಂಬುವಾಹಃ ॥ <br>
+        ನಾರಾಯಣ ಪ್ರಣಯಿನೀ ನಯನಾಂಬುವಾಹಃ ॥ 8 ॥ <br>
 
         <span class="ENG">
             dadyaaddayaanupavanO draviNaaMbudhaaraaM <br>
@@ -265,7 +274,7 @@
         ಇಷ್ಟಾ ವಿಶಿಷ್ಟಮತಯೋಪಿ ಯಯಾ ದಯಾರ್ದ್ರ <br>
         ದೃಷ್ಟ್ಯಾ ತ್ರಿವಿಷ್ಟಪಪದಂ ಸುಲಭಂ ಲಭಂತೇ । <br>
         ದೃಷ್ಟಿಃ ಪ್ರಹೃಷ್ಟ ಕಮಲೋದರ ದೀಪ್ತಿರಿಷ್ಟಾಂ <br>
-        ಪುಷ್ಟಿಂ ಕೃಷೀಷ್ಟ ಮಮ ಪುಷ್ಕರ ವಿಷ್ಟರಾ ಯಾಃ ॥ <br>
+        ಪುಷ್ಟಿಂ ಕೃಷೀಷ್ಟ ಮಮ ಪುಷ್ಕರ ವಿಷ್ಟರಾ ಯಾಃ ॥ 9 ॥ <br>
 
         <span class="ENG">
             ishhTaa vishishhTamatayOpi yayaa dayaardra <br>
@@ -279,7 +288,7 @@
         ಗೀರ್ದೇವತೇತಿ ಗರುಡಧ್ವಜ ಸುಂದರೀತಿ <br>
         ಶಾಕಂಬರೀತಿ ಶಶಿಶೇಖರ ವಲ್ಲಭೇತಿ । <br>
         ಸೃಷ್ಟಿ ಸ್ಥಿತಿ ಪ್ರಳಯ ಕೇಳಿಷು ಸಂಸ್ಥಿತಾಯೈ <br>
-        ತಸ್ಯೈ ನಮಸ್ತ್ರಿಭುವನೈಕ ಗುರೋಸ್ತರುಣ್ಯೈ ॥ <br>
+        ತಸ್ಯೈ ನಮಸ್ತ್ರಿಭುವನೈಕ ಗುರೋಸ್ತರುಣ್ಯೈ ॥ 10 ॥ <br>
 
         <span class="ENG">
             geerdEvatEti garuDadhvaja suMdareeti <br>
@@ -289,11 +298,15 @@
         </span>
     </p>
 
+    <h3>ಕನಕಧಾರಾ ಸ್ತೋತ್ರ - (Kanakadhara Stotra Part III - 6 shlokas)</h3>
+
+    Express gratitude to Lakshmi.
+
     <p>
         ಶ್ರುತ್ಯೈ ನಮೋಽಸ್ತು ಶುಭಕರ್ಮ ಫಲಪ್ರಸೂತ್ಯೈ <br>
         ರತ್ಯೈ ನಮೋಽಸ್ತು ರಮಣೀಯ ಗುಣಾರ್ಣವಾಯೈ । <br>
         ಶಕ್ತ್ಯೈ ನಮೋಽಸ್ತು ಶತಪತ್ರ ನಿಕೇತನಾಯೈ <br>
-        ಪುಷ್ಟ್ಯೈ ನಮೋಽಸ್ತು ಪುರುಷೋತ್ತಮ ವಲ್ಲಭಾಯೈ ॥ <br>
+        ಪುಷ್ಟ್ಯೈ ನಮೋಽಸ್ತು ಪುರುಷೋತ್ತಮ ವಲ್ಲಭಾಯೈ ॥ 11 ॥ <br>
 
         <span class="ENG">
             shrutyai namO.astu shubhakarma phalaprasootyai <br>
@@ -307,7 +320,7 @@
         ನಮೋಽಸ್ತು ನಾಳೀಕ ನಿಭಾನನಾಯೈ <br>
         ನಮೋಽಸ್ತು ದುಗ್ಧೋದಧಿ ಜನ್ಮಭೂಮ್ಯೈ । <br>
         ನಮೋಽಸ್ತು ಸೋಮಾಮೃತ ಸೋದರಾಯೈ <br>
-        ನಮೋಽಸ್ತು ನಾರಾಯಣ ವಲ್ಲಭಾಯೈ ॥ <br>
+        ನಮೋಽಸ್ತು ನಾರಾಯಣ ವಲ್ಲಭಾಯೈ ॥ 12 ॥ <br>
 
         <span class="ENG">
             namO.astu naaleeka nibhaananaayai <br>
@@ -319,9 +332,9 @@
 
     <p>
         ನಮೋಽಸ್ತು ಹೇಮಾಂಬುಜ ಪೀಠಿಕಾಯೈ <br>
-        ನಮೋಽಸ್ತು ಭೂಮಂಡಲ ನಾಯಿಕಾಯೈ ।
+        ನಮೋಽಸ್ತು ಭೂಮಂಡಲ ನಾಯಿಕಾಯೈ । <br>
         ನಮೋಽಸ್ತು ದೇವಾದಿ ದಯಾಪರಾಯೈ <br>
-        ನಮೋಽಸ್ತು ಶಾರಂಗಾಯುಧ ವಲ್ಲಭಾಯೈ ॥ <br>
+        ನಮೋಽಸ್ತು ಶಾರಂಗಾಯುಧ ವಲ್ಲಭಾಯೈ ॥ 13 ॥ <br>
 
         <span class="ENG">
             namO.astu hEmaaMbuja peeThikaayai <br>
@@ -335,7 +348,7 @@
         ನಮೋಽಸ್ತು ದೇವ್ಯೈ ಭೃಗುನಂದನಾಯೈ <br>
         ನಮೋಽಸ್ತು ವಿಷ್ಣೋರುರಸಿ ಸ್ಥಿತಾಯೈ । <br>
         ನಮೋಽಸ್ತು ಲಕ್ಷ್ಮ್ಯೈ ಕಮಲಾಲಯಾಯೈ <br>
-        ನಮೋಽಸ್ತು ದಾಮೋದರ ವಲ್ಲಭಾಯೈ ॥ <br>
+        ನಮೋಽಸ್ತು ದಾಮೋದರ ವಲ್ಲಭಾಯೈ ॥ 14 ॥ <br>
 
         <span class="ENG">
             namO.astu dEvyai bhRRigunaMdanaayai <br>
@@ -349,7 +362,7 @@
         ನಮೋಽಸ್ತು ಕಾಂತ್ಯೈ ಕಮಲೇಕ್ಷಣಾಯೈ <br>
         ನಮೋಽಸ್ತು ಭೂತ್ಯೈ ಭುವನಪ್ರಸೂತ್ಯೈ । <br>
         ನಮೋಽಸ್ತು ದೇವಾದಿಭಿರರ್ಚಿತಾಯೈ <br>
-        ನಮೋಽಸ್ತು ನಂದಾತ್ಮಜ ವಲ್ಲಭಾಯೈ ॥ <br>
+        ನಮೋಽಸ್ತು ನಂದಾತ್ಮಜ ವಲ್ಲಭಾಯೈ ॥ 15 ॥ <br>
 
         <span class="ENG">
             namO.astu kaaMtyai kamalEkshhaNaayai <br>
@@ -363,7 +376,7 @@
         ಸಂಪತ್ಕರಾಣಿ ಸಕಲೇಂದ್ರಿಯ ನಂದನಾನಿ <br>
         ಸಾಮ್ರಾಜ್ಯ ದಾನವಿಭವಾನಿ ಸರೋರುಹಾಕ್ಷಿ । <br>
         ತ್ವದ್ವಂದನಾನಿ ದುರಿತಾ ಹರಣೋದ್ಯತಾನಿ <br>
-        ಮಾಮೇವ ಮಾತರನಿಶಂ ಕಲಯಂತು ಮಾನ್ಯೇ ॥ <br>
+        ಮಾಮೇವ ಮಾತರನಿಶಂ ಕಲಯಂತು ಮಾನ್ಯೇ ॥ 16 ॥ <br>
 
         <span class="ENG">
             saMpatkaraaNi sakalEMdriya naMdanaani <br>
@@ -377,7 +390,7 @@
         ಯತ್ಕಟಾಕ್ಷ ಸಮುಪಾಸನಾ ವಿಧಿಃ <br>
         ಸೇವಕಸ್ಯ ಸಕಲಾರ್ಥ ಸಂಪದಃ । <br>
         ಸಂತನೋತಿ ವಚನಾಂಗ ಮಾನಸೈಃ <br>
-        ತ್ವಾಂ ಮುರಾರಿಹೃದಯೇಶ್ವರೀಂ ಭಜೇ ॥ <br>
+        ತ್ವಾಂ ಮುರಾರಿಹೃದಯೇಶ್ವರೀಂ ಭಜೇ ॥ 17 ॥ <br>
 
         <span class="ENG">
             yatkaTaakshha samupaasanaa vidhiH <br>
@@ -387,11 +400,15 @@
         </span>
     </p>
 
+    <h3>ಕನಕಧಾರಾ ಸ್ತೋತ್ರ - (Kanakadhara Stotra Part IV)</h3>
+
+    Ask goddes to appear in gajalakshmi avataram.
+
     <p>
         ಸರಸಿಜನಿಲಯೇ ಸರೋಜಹಸ್ತೇ <br>
         ಧವಳತಮಾಂಶುಕ ಗಂಧಮಾಲ್ಯಶೋಭೇ । <br>
         ಭಗವತಿ ಹರಿವಲ್ಲಭೇ ಮನೋಜ್ಞೇ <br>
-        ತ್ರಿಭುವನಭೂತಿಕರೀ ಪ್ರಸೀದಮಹ್ಯಂ ॥ <br>
+        ತ್ರಿಭುವನಭೂತಿಕರೀ ಪ್ರಸೀದಮಹ್ಯಂ ॥ 18 ॥ <br>
 
         <span class="ENG">
             sarasijanilayE sarOjahastE <br>
@@ -405,7 +422,7 @@
         ದಿಗ್ಘಸ್ತಿಭಿಃ ಕನಕ ಕುಂಭಮುಖಾವಸೃಷ್ಟ <br>
         ಸ್ವರ್ವಾಹಿನೀ ವಿಮಲಚಾರುಜಲಾಪ್ಲುತಾಂಗೀಂ । <br>
         ಪ್ರಾತರ್ನಮಾಮಿ ಜಗತಾಂ ಜನನೀಮಶೇಷ <br>
-        ಲೋಕಧಿನಾಥ ಗೃಹಿಣೀಮಮೃತಾಬ್ಧಿಪುತ್ರೀಂ ॥ <br>
+        ಲೋಕಧಿನಾಥ ಗೃಹಿಣೀಮಮೃತಾಬ್ಧಿಪುತ್ರೀಂ ॥ 19 ॥ <br>
 
         <span class="ENG">
             digghastibhiH kanaka kuMbhamukhaavasRRishhTa <br>
@@ -414,6 +431,8 @@
             lOkadhinaatha gRRihiNeemamRRitaabdhiputreeM ॥ <br>
         </span>
     </p>
+
+    The stotram ends with this shloka. Rest is optional.
 
     <h3>ಪ್ರಕ್ಷಿಪ್ತ ಶ್ಲೋಕಗಳು (Prakishipta Sholka)</h3>
 
@@ -424,7 +443,7 @@
         ಸುವರ್ಣವರ್ಣಾಂ ಪ್ರಣಮಾಮಿ ಲಕ್ಶ್ಮೇಂ <br>
 
         <span class="ENG">
-            bilvaaTavee madhya lasat sarOjae <br> 
+            bilvaaTavee madhya lasat sarOjae <br>
             sahasra patrae sukhasannivishTaaM <br>
             ashTaa padaaMbhOruha paaNipadmaaM <br>
             suvarNavarNaaM praNamaami lakshmeeM <br>
@@ -483,6 +502,13 @@
     </ul>
 
 </body>
+
+
+<h3>References</h3>
+<ul>
+    <li>https://www.sringeri.net/stotras/devistotrani/kanakadharastotram</li>
+</ul>
+
 
 <!-- Centralized Scripts -->
 <script src="../scripts/common.js"></script>
