--- a/stotram/kanakadhara-stotram.html
+++ b/stotram/kanakadhara-stotram.html
@@ -19,31 +19,20 @@
 
     Sequence recommended by Nanduri Sambasiva Rao.<br>
 
-    NOTE: Pending.. extract OCR telugu text from Nanduri translate to Kannada and compare. We have found many
-    discrepancies in Nanduri Kannada text, in particular the phala shruti section (which is not mentioned else where).
-    <br>
-
-    NOTE: Pending.. add reason for resequencing the stotram.
-
     <h3>ಸಂಕಲ್ಪಮ್ (Sankalpam)</h3>
 
     <p>
-        ಕಮಲೇ ಕಮಲಾಕ್ಷ ವಲ್ಲಭೇ ತ್ವಂ <br>
-        ಕರುಣಾಪೂರ ತರಂಗಿತೈರಪಾಂಗೈಃ । <br>
+        ಕಮಲೇ ಕಮಲಾಕ್ಷವಲ್ಲಭೇ ತ್ವಂ <br>
+        ಕರುಣಾಪೂರತರಂಗಿತೈರಪಾಂಗೈಃ । <br>
         ಅವಲೋಕಯ ಮಾಮಕಿಂಚನಾನಾಂ <br>
-        ಪ್ರಥಮಂ ಪಾತ್ರಮಕೃತಿಮಂ ದಯಾಯಾಃ ॥ <br>
+        ಪ್ರಥಮಂ ಪಾತ್ರಮಕೃತ್ರಿಮಂ ದಯಾಯಾಃ ॥ <br>
 
         <span class="ENG">
-            kamale kamalaaksha vallabe tvam <br>
-            karunaapoora tarangee triar apangaih | <br>
-            avalookaya maam akinchanaanaam <br>
-            prathamam paathram akritrimam dayaayaah || <br>
+            kamale kamalākṣavallabhe tvaṃ <br>
+            karuṇāpūrataraṅgitairapāṅgaiḥ । <br>
+            avalokaya māmakiñcanānāṃ <br>
+            prathamaṃ pātramakṛtrimaṃ dayāyāḥ || <br>
         </span>
-
-        <!-- कमले कमलाक्षवल्लभे त्वं <br>
-        करुणापूरतरङ्गितैरपाङ्गैः । <br>
-        अवलोकय मामकिञ्चनानां <br>
-        प्रथमं पात्रमकृत्रिमं दयायाः ॥ <br> -->
     </p>
 
     <p>
@@ -58,11 +47,6 @@
             parimaarjaya maata: aMghriNaatae <br>
             dhanikadvaara nivaasa du:khadOg-dhreeM <br>
         </span>
-
-        <!-- कमलासन पाणिना ललाटे । <br>
-        लिखितामक्षर पङ्क्तिमस्य जन्तोः॥ <br>
-        परिमार्जय मातरङ्घ्रिणा ते । <br>
-        धनिकद्वारनिवासदुःखदोग्ध्रीम्॥ २१॥ <br> -->
     </p>
 
     <h3>ವಿನಾಯಕ ಸ್ತುತಿ - (Vinayaka Stuti)</h3>
@@ -71,20 +55,17 @@
     When you receive blessings of goddess, this stuti ensures full benefits without any obstacles.
 
     <p>
-        ವಂದೇ ವಂದಾರು ಮಂದಾರಮಿಂದಿರಾನಂದ ಕಂದಲಂ <br>
-        ಅಮಂದಾನಂದ ಸಂದೋಹ ಬಂಧುರಂ ಸಿಂಧುರಾನನಂ <br>
+        ವಂದೇ ವಂದಾರು-ಮಂದಾರಂ ಇಂದಿರಾನಂದ-ಕಂದಲಂ | <br>
+        ಅಮಂದಾನಂದ-ಸಂದೋಹ-ಬಂಧುರಂ ಸಿಂಧುರಾನನಂ ||<br>
 
         <span class="ENG">
-            vande vandāru mandāram indirā-ānanda kandhalam <br>
-            amanda-ānanda sandoha bandhuram sindhura-ānanam <br>
+            vande vandāru-mandāram indirānanda-kandalam | <br>
+            amandānanda-sandoha-bandhuraṃ sindhurānanam || <br>
 
             You are like the kalpa vriksa for the wealthy,
             you are the one who bring happiness to Lakshmi's eyes,
             you are like a muddha/blob of happiness, we bow to you.
         </span>
-
-        <!-- वन्दे वन्दारु मन्दारमिन्दिरानन्द कन्दलं <br>
-        अमन्दानन्द सन्दोह बन्धुरं सिन्धुराननम् <br> -->
     </p>
 
     <h3>ಧ್ಯಾನ ಶ್ಲೋಕ (Dhyana Shloka)</h3>
@@ -101,128 +82,97 @@
             praatarnamaami jagataaM jananeeM-aSaesha <br>
             lOkaadhinaatha gRhiNeeM-amRtaabdhi-putreeM <br>
         </span>
-
-        <!-- दिग्घस्तिभिः कनककुम्भमुखावसृष्ट <br>
-        स्वर्वाहिनी विमलचारुजलाप्लुताङ्गीम् । <br>
-        प्रातर्नमामि जगतां जननीमशेष <br>
-        लोकधिनाथ गृहिणीममृताब्धिपुत्रीं ॥ <br> -->
     </p>
 
     <h3>ಕನಕಧಾರಾ ಸ್ತೋತ್ರ - (Kanakadhara Stotra Part I - 7 shlokas)</h3>
 
     <p>
         ಅಂಗಂ ಹರೇಃ ಪುಲಕಭೂಷಣಮಾಶ್ರಯಂತೀ <br>
-        ಭೃಂಗಾಂಗನೇವ ಮುಕುಳಾಭರಣಂ ತಮಾಲಂ । <br>
-        ಅಂಗೀಕೃತಾಖಿಲ ವಿಭೂತಿರಪಾಂಗಲೀಲಾ <br>
-        ಮಾಂಗಲ್ಯದಾಸ್ತು ಮಮ ಮಂಗಳದೇವತಾಯಾಃ ॥ 1 ॥ <br>
+        ಭೃಂಗಾಂಗನೇವ ಮುಕುಲಾಭರಣಂ ತಮಾಲಂ । <br>
+        ಅಂಗೀಕೃತಾಖಿಲವಿಭೂತಿರಪಾಂಗಲೀಲಾ <br>
+        ಮಾಂಗಲ್ಯದಾ'ಸ್ತು ಮಮ ಮಂಗಲದೇವತಾಯಾಃ ॥ 1 ॥
 
         <span class="ENG">
-            aMgaM harēh pulakabhūṣaṇamāśrayantī <br>
-            bhṛṅgāṅganēva mukuḻābharaṇaṃ tamālam । <br>
-            aMgaīkṛtākhila-vibhūtirapāṅgalīlā <br>
-            māṅgalyadāstu mama maṅgaḻadēvatāyāḥ ॥ 1 ॥
+            aṅgaṃ hareḥ pulakabhūṣaṇamāśrayantī <br>
+            bhṛṅgāṅganeva mukulābharaṇaṃ tamālam । <br>
+            aṅgīkṛtākhilavibhūtirapāṅgalīlā <br>
+            māṅgalyadā'stu mama maṅgaladevatāyāḥ ॥ 1 ॥
         </span>
-
-        <!-- अङ्गं हरेः पुलकभूषणमाश्रयन्ती <br>
-        भृङ्गाङ्गनेव मुकुलाभरणं तमालम् । <br>
-        अङ्गीकृताखिलविभूतिरपाङ्गलीला <br>
-        माङ्गल्यदाऽस्तु मम मङ्गलदेवतायाः ॥ १ ॥ <br> -->
     </p>
 
     <p>
         ಮುಗ್ಧಾ ಮುಹುರ್ವಿದಧತೀ ವದನೇ ಮುರಾರೇಃ <br>
         ಪ್ರೇಮತ್ರಪಾಪ್ರಣಿಹಿತಾನಿ ಗತಾಗತಾನಿ । <br>
-        ಮಾಲಾದೃಶೋರ್ಮಧುಕರೀವ ಮಹೋತ್ಪಲೇ ಯಾ <br>
-        ಸಾ ಮೇ ಶ್ರಿಯಂ ದಿಶತು ಸಾಗರ ಸಂಭವಾ ಯಾಃ ॥ 2 ॥ <br>
+        ಮಾಲಾ ದೃಶೋರ್ಮಧುಕರೀವ ಮಹೋತ್ಪಲೇ ಯಾ <br>
+        ಸಾ ಮೇ ಶ್ರಿಯಂ ದಿಶತು ಸಾಗರಸಂಭವಾಯಾಃ ॥ 2 ॥ <br>
+
 
         <span class="ENG">
-            mugdhaa muhurvidadhatee vadanae muraarae: <br>
-            praematrapaa praNihitaani gataagataani <br>
-            maalaa dRSOr madhukareeva mahOtpalaeyaa <br>
-            saa mae SriyaM diSatu saagara saMbhavaayaa: <br>
+            mugdhā muhurvidadhatī vadane murāreḥ <br>
+            prematrapāpraṇihitāni gatāgatāni । <br>
+            mālā dṛśormadhukarīva mahotpale yā <br>
+            sā me śriyaṃ diśatu sāgarasambhavāyāḥ ॥ 2 ॥
         </span>
-
-        <!-- मुग्धा मुहुर्विदधती वदने मुरारेः <br>
-        प्रेमत्रपाप्रणिहितानि गतागतानि । <br>
-        मालादृशोर्मधुकरीव महोत्पले या <br>
-        सा मे श्रियं दिशतु सागर सम्भवा याः ॥ 2 ॥ <br> -->
     </p>
 
     <p>
-        ವಿಶ್ವಾಮರೇಂದ್ರ ಪದ ವಿಭ್ರಮ ದಾನದಕ್ಷಂ <br>
-        ಆನಂದಹೇತುರಧಿಕಂ ಮುರವಿದ್ವಿಷೋಽಪಿ । <br>
-        ಈಷನ್ನಿಷೀದತು ಮಯಿ ಕ್ಷಣಮೀಕ್ಷಣಾರ್ಥಂ <br>
-        ಇಂದೀವರೋದರ ಸಹೋದರಮಿಂದಿರಾ ಯಾಃ ॥ 3 ॥ <br>
+        ವಿಶ್ವಾಮರೇಂದ್ರಪದವಿಭ್ರಮದಾನದಕ್ಷ- <br>
+        ಮಾನಂದಹೇತುರಧಿಕಂ ಮುರವಿದ್ವಿಷೋ'ಪಿ । <br>
+        ಈಷನ್ನಿಷೀದತು ಮಯಿ ಕ್ಷಣಮೀಕ್ಷಣಾರ್ಧ- <br>
+        ಮಿಂದೀವರೋದರಸಹೋದರಮಿಂದಿರಾಯಾಃ ॥ 3 ॥ <br>
+
 
         <span class="ENG">
-            viSvaamaraeMdra-padavibhrama-daana-dakshaM <br>
-            aanaMdahaetu-radhikaM muravidvishOpi <br>
-            eeshan-nisheedatu mayi kshaNameekshaNaardhaM <br>
-            iMdeevarOdara-sahOdara-miMdiraayaa: <br>
+            viśvāmarendrapadavibhramadānadakṣa- <br>
+            mānandaheturadhikaṃ muravidviṣo'pi । <br>
+            īṣanniṣīdatu mayi kṣaṇamīkṣaṇārdha- <br>
+            mindīvarodarasahodaramindirāyāḥ ॥ 3 ॥
         </span>
-
-        <!-- विश्वामरेन्द्रपदविभ्रमदानदक्षं <br>
-        आनन्दहेतुरधिकं मुरविद्विषोऽपि । <br>
-        ईषन्निषीदतु मयि क्षणमीक्षणार्धम् <br>
-        इन्दीवरोदरसहोदरमिन्दिरायाः ॥ <br> -->
     </p>
 
 
     <p>
-        ಆಮೀಲಿತಾಕ್ಷಮಧಿಗ್ಯಮ ಮುದಾ ಮುಕುಂದಂ <br>
-        ಆನಂದಕಂದಮನಿಮೇಷಮನಂಗ ತಂತ್ರಂ । <br>
+        ಆಮೀಲಿತಾಕ್ಷಮಧಿಗಮ್ಯ ಮುದಾ ಮುಕುಂದ - <br>
+        ಮಾನಂದಕಂದಮನಿಮೇಷಮನಂಗತಂತ್ರಂ । <br>
         ಆಕೇಕರಸ್ಥಿತಕನೀನಿಕಪಕ್ಷ್ಮನೇತ್ರಂ <br>
-        ಭೂತ್ಯೈ ಭವನ್ಮಮ ಭುಜಂಗ ಶಯಾಂಗನಾ ಯಾಃ ॥ 4 ॥ <br>
+        ಭೂತ್ಯೈ ಭವೇನ್ಮಮ ಭುಜಂಗಶಯಾಂಗನಾಯಾಃ ॥ 4 ॥ <br>
 
         <span class="ENG">
-            aameelitaaksha madhigamya mudaa mukuMdaM <br>
-            aanaMdakaMda manimaesha manaMga taMtraM <br>
-            aakaekara sthita kaneenika pakshma naetraM <br>
-            bhootyai bhavaenmama bhujaMga SayaaMganaayaa: <br>
+            āmīlitākṣamadhigamya mudā mukunda - <br>
+            mānandakandamanimeṣamanaṅgatantram । <br>
+            ākekarasthitakanīnikapakṣmanetraṃ <br>
+            bhūtyai bhavenmama bhujaṅgaśayāṅganāyāḥ ॥ 4 ॥
         </span>
-
-        <!-- आमीलिताक्षमधिगम्य मुदा मुकुन्दं <br>
-        आनन्दकन्दमनिमेषमनङ्गतन्त्रम् । <br>
-        आकेकरस्थितकनीनिकपक्ष्मनेत्रं <br>
-        भूत्यै भवेन्मम भुजङ्गशयाङ्गनायाः ॥ ४॥ <br> -->
     </p>
 
     <p>
-        ಕಾಲಾಂಬುದಾಳಿ ಲಲಿತೋರಸಿ ಕೈಟಭಾರೇಃ <br>
-        ಧಾರಾಧರೇ ಸ್ಫುರತಿ ಯಾ ತಟಿದಂಗನೇವ । <br>
-        ಮಾತುಸ್ಸಮಸ್ತಜಗತಾಂ ಮಹನೀಯಮೂರ್ತಿಃ <br>
-        ಭದ್ರಾಣಿ ಮೇ ದಿಶತು ಭಾರ್ಗವನಂದನಾ ಯಾಃ ॥ 5 ॥ <br>
+        ಕಾಲಾಂಬುದಾಲಿಲಲಿತೋರಸಿ ಕೈಟಭಾರೇ- <br>
+        ರ್ಧಾರಾಧರೇ ಸ್ಫುರತಿ ಯಾ ತಟಿದಂಗನೇವ । <br>
+        ಮಾತುಃ ಸಮಸ್ತಜಗತಾಂ ಮಹನೀಯಮೂರ್ತಿ- <br>
+        ರ್ಭದ್ರಾಣಿ ಮೇ ದಿಶತು ಭಾರ್ಗವನಂದನಾಯಾಃ ॥ 5 ॥ <br>
 
         <span class="ENG">
-            kaalaaMbudaali-lalitOrasi kaiTabhaarae: <br>
-            dhaaraa dharae sphurati yaa taDidaMga naeva <br>
-            maatu: samasta jagataaM mahaneeyamoorti: <br>
-            bhadraaNi mae diSatu bhaargava naMdanaayaa: <br>
+            kālāmbudālilalitorasi kaiṭabhāre- <br>
+            rdhārādhare sphurati yā taṭidaṅganeva । <br>
+            mātuḥ samastajagatāṃ mahanīyamūrti- <br>
+            rbhadrāṇi me diśatu bhārgavanandanāyāḥ <br>
         </span>
 
-        <!-- कालाम्बुदालिललितोरसि कैटभारेः <br>
-        धाराधरे स्फुरति या तडिदङ्गनेव । <br>
-        मातुस्समस्तजगतां महनीयमूर्तिः <br>
-        भद्राणि मे दिशतु भार्गवनन्दनायाः ॥ ६॥ <br> -->
     </p>
 
     <p>
         ಬಾಹ್ವಂತರೇ ಮಧುಜಿತಃ ಶ್ರಿತಕೌಸ್ತುಭೇ ಯಾ <br>
-        ಹಾರಾವಳೀವ ಹರಿನೀಲಮಯೀ ವಿಭಾತಿ । <br>
-        ಕಾಮಪ್ರದಾ ಭಗವತೋಽಪಿ ಕಟಾಕ್ಷಮಾಲಾ <br>
-        ಕಳ್ಯಾಣಮಾವಹತು ಮೇ ಕಮಲಾಲಯಾ ಯಾಃ ॥ 6 ॥ <br>
+        ಹಾರಾವಲೀವ ಹರಿನೀಲಮಯೀ ವಿಭಾತಿ । <br>
+        ಕಾಮಪ್ರದಾ ಭಗವತೋ'ಪಿ ಕಟಾಕ್ಷಮಾಲಾ <br>
+        ಕಲ್ಯಾಣಮಾವಹತು ಮೇ ಕಮಲಾಲಯಾಯಾಃ ॥ 6 ॥ <br>
 
         <span class="ENG">
-            baahvaMtarae murajita: Srithakaustubhae yaa <br>
-            haaraavaLeeva harineela mayee vibhaati <br>
-            kaamapradaa bhagavatOpi kaTaakshamaalaa <br>
-            kalyaaNamaavahatu mae kamalaalayaayaa: <br>
+            bāhvantare madhujitaḥ śritakaustubhe yā <br>
+            hārāvalīva harinīlamayī vibhāti । <br>
+            kāmapradā bhagavato'pi kaṭākṣamālā <br>
+            kalyāṇamāvahatu me kamalālayāyāḥ <br>
         </span>
 
-        <!-- बाह्वन्तरे मधुजितः श्रितकौस्तुभे या <br>
-        हारावळीव हरिनीलमयी विभाति । <br>
-        कामप्रदा भगवतोऽपि कटाक्षमाला <br>
-        कळ्याणमावहतु मे कमलालयायाः ॥ ५॥ <br> -->
     </p>
 
 
@@ -231,70 +181,62 @@
     If you have financial issue, do plead with tears washing her feet.
 
     <p>
-        ಪ್ರಾಪ್ತಂ ಪದಂ ಪ್ರಥಮತಃ ಖಲು ಯತ್ಪ್ರಭಾವಾತ್ <br>
-        ಮಾಂಗಲ್ಯಭಾಜಿ ಮಧುಮಾಥಿನಿ ಮನ್ಮಥೇನ । <br>
-        ಮಯ್ಯಾಪತೇತ್ತದಿಹ ಮಂಥರಮೀಕ್ಷಣಾರ್ಥಂ <br>
-        ಮಂದಾಲಸಂ ಚ ಮಕರಾಲಯ ಕನ್ಯಕಾ ಯಾಃ ॥ 7 ॥ <br>
+        ಪ್ರಾಪ್ತಂ ಪದಂ ಪ್ರಥಮತಃ ಖಲು ಯತ್ಪ್ರಭಾವಾ- <br>
+        ನ್ಮಾಂಗಲ್ಯಭಾಜಿ ಮಧುಮಾಥಿನಿ ಮನ್ಮಥೇನ । <br>
+        ಮಯ್ಯಾಪತೇತ್ತದಿಹ ಮಂಥರಮೀಕ್ಷಣಾರ್ಧಂ <br>
+        ಮಂದಾಲಸಂ ಚ ಮಕರಾಲಯಕನ್ಯಕಾಯಾಃ ॥ 7 ॥ <br>
 
         <span class="ENG">
-            praaptaM padaM prathamata: khalu yatprabhaavaat <br>
-            maaMgalyabhaaji madhumaathini manmathaena <br>
-            mayyaapatae ttadiha maMthara meekshaNaarthaM <br>
-            maMdaalasaM cha makaraalaya kanyakaayaa: <br>
+            prāptaṃ padaṃ prathamataḥ khalu yatprabhāvā- <br>
+            nmāṅgalyabhāji madhumāthini manmathena । <br>
+            mayyāpatettadiha mantharamīkṣaṇārdhaṃ <br>
+            mandālasaṃ ca makarālayakanyakāyāḥ <br>
         </span>
 
-        <!-- प्राप्तं पदं प्रथमतः खलु यत्प्रभावात् <br>
-        माङ्गळ्यभाजि मधुमाथिनि मन्मथेन । <br>
-        मय्यापतेत्तदिह मन्थरमीक्षणार्धं <br>
-        मन्दालसं च मकरालयकन्यकायाः ॥ ७॥ <br> -->
     </p>
 
     <h3>ಕನಕಧಾರಾ ಸ್ತೋತ್ರ - (Kanakadhara Stotra Part II - 3 shlokas)</h3>
 
     <p>
-        ದದ್ಯಾದ್ದಯಾನು ಪವನೋ ದ್ರವಿಣಾಂಬುಧಾರಾಂ <br>
-        ಅಸ್ಮಿನ್ನಕಿಂಚನ ವಿಹಂಗ ಶಿಶೌ ವಿಷಣ್ಣೇ । <br>
+        ದದ್ಯಾದ್ದಯಾನುಪವನೋ ದ್ರವಿಣಾಂಬುಧಾರಾ- <br>
+        ಮಸ್ಮಿನ್ನಕಿಂಚನವಿಹಂಗಶಿಶೌ ವಿಷಣ್ಣೇ । <br>
         ದುಷ್ಕರ್ಮಘರ್ಮಮಪನೀಯ ಚಿರಾಯ ದೂರಂ <br>
-        ನಾರಾಯಣ ಪ್ರಣಯಿನೀ ನಯನಾಂಬುವಾಹಃ ॥ 8 ॥ <br>
+        ನಾರಾಯಣಪ್ರಣಯಿನೀನಯನಾಂಬುವಾಹಃ ॥ 8 ॥ <br>
 
         <span class="ENG">
-            dadyaaddayaanupavanO draviNaaMbudhaaraaM <br>
-            asminnakiMchana-vihaMga-SiSau vishaNNae <br>
-            dushkarma-gharma-mapaneeya chiraaya dooraM <br>
-            naaraayaNa-praNayinee-nayanaaMbuvaaha: <br>
+            dadyāddayānupavano draviṇāmbudhārā- <br>
+            masminnakiñcanavihaṅgaśiśau viṣaṇṇe । <br>
+            duṣkarmagharmamapanīya cirāya dūraṃ <br>
+            nārāyaṇapraṇayinīnayanāmbuvāhaḥ <br>
         </span>
 
-        <!-- दद्याद्दयानुपवनो द्रविणाम्बुधारां <br>
-        अस्मिन्नकिञ्चनविहङ्गशिशौ विषण्णे । <br>
-        दुष्कर्मघर्ममपनीय चिराय दूरं <br>
-        नारायणप्रणयिनीनयनाम्बुवाहः ॥ <br> -->
     </p>
 
     <p>
-        ಇಷ್ಟಾ ವಿಶಿಷ್ಟಮತಯೋಪಿ ಯಯಾ ದಯಾರ್ದ್ರ <br>
+        ಇಷ್ಟಾವಿಶಿಷ್ಟಮತಯೋ'ಪಿ ಯಯಾ ದಯಾರ್ದ್ರ- <br>
         ದೃಷ್ಟ್ಯಾ ತ್ರಿವಿಷ್ಟಪಪದಂ ಸುಲಭಂ ಲಭಂತೇ । <br>
-        ದೃಷ್ಟಿಃ ಪ್ರಹೃಷ್ಟ ಕಮಲೋದರ ದೀಪ್ತಿರಿಷ್ಟಾಂ <br>
-        ಪುಷ್ಟಿಂ ಕೃಷೀಷ್ಟ ಮಮ ಪುಷ್ಕರ ವಿಷ್ಟರಾ ಯಾಃ ॥ 9 ॥ <br>
+        ದೃಷ್ಟಿಃ ಪ್ರಹೃಷ್ಟಕಮಲೋದರದೀಪ್ತಿರಿಷ್ಟಾಂ <br>
+        ಪುಷ್ಟಿಂ ಕೃಷೀಷ್ಟ ಮಮ ಪುಷ್ಕರವಿಷ್ಟರಾಯಾಃ ॥ 9 ॥ <br>
 
         <span class="ENG">
-            ishhTaa vishishhTamatayOpi yayaa dayaardra <br>
-            dRRishhTyaa trivishhTapapadaM sulabhaM labhaMtE । <br>
-            dRRishhTiH prahRRishhTa kamalOdara deeptirishhTaaM <br>
-            pushhTiM kRRishheeshhTa mama pushhkara vishhTaraa yaaH ॥ <br>
+            iṣṭāviśiṣṭamatayo'pi yayā dayārdra- <br>
+            dṛṣṭyā triviṣṭapapadaṃ sulabhaṃ labhante । <br>
+            dṛṣṭiḥ prahṛṣṭakamalodaradīptiriṣṭāṃ <br>
+            puṣṭiṃ kṛṣīṣṭa mama puṣkaraviṣṭarāyāḥ ॥ <br>
         </span>
     </p>
 
     <p>
-        ಗೀರ್ದೇವತೇತಿ ಗರುಡಧ್ವಜ ಸುಂದರೀತಿ <br>
-        ಶಾಕಂಬರೀತಿ ಶಶಿಶೇಖರ ವಲ್ಲಭೇತಿ । <br>
-        ಸೃಷ್ಟಿ ಸ್ಥಿತಿ ಪ್ರಳಯ ಕೇಳಿಷು ಸಂಸ್ಥಿತಾಯೈ <br>
-        ತಸ್ಯೈ ನಮಸ್ತ್ರಿಭುವನೈಕ ಗುರೋಸ್ತರುಣ್ಯೈ ॥ 10 ॥ <br>
+        ಗೀರಗೀರ್ದೇವತೇತಿ ಗರುಡಧ್ವಜಸುಂದರೀತಿ <br>
+        ಶಾಕಂಭರೀತಿ ಶಶಿಶೇಖರವಲ್ಲಭೇತಿ । <br>
+        ಸೃಷ್ಟಿಸ್ಥಿತಿಪ್ರಲಯಕೇಲಿಷು ಸಂಸ್ಥಿತಾಯೈ <br>
+        ತಸ್ಯೈ ನಮಸ್ತ್ರಿಭುವನೈಕಗುರೋಸ್ತರುಣ್ಯೈ ॥ 10 ॥ <br>
 
         <span class="ENG">
-            geerdEvatEti garuDadhvaja suMdareeti <br>
-            shaakaMbareeti shashishEkhara vallabhEti । <br>
-            sRRishhTi sthiti pralaya kElishhu saMsthitaayai <br>
-            tasyai namastribhuvanaika gurOstaruNyai ॥ <br>
+            gīrdevateti garuḍadhvajasundarīti <br>
+            śākambharīti śaśiśekharavallabheti । <br>
+            sṛṣṭisthitipralayakeliṣu saṃsthitāyai <br>
+            tasyai namastribhuvanaikagurostaruṇyai ॥ <br>
         </span>
     </p>
 
@@ -303,30 +245,30 @@
     Express gratitude to Lakshmi.
 
     <p>
-        ಶ್ರುತ್ಯೈ ನಮೋಽಸ್ತು ಶುಭಕರ್ಮ ಫಲಪ್ರಸೂತ್ಯೈ <br>
-        ರತ್ಯೈ ನಮೋಽಸ್ತು ರಮಣೀಯ ಗುಣಾರ್ಣವಾಯೈ । <br>
-        ಶಕ್ತ್ಯೈ ನಮೋಽಸ್ತು ಶತಪತ್ರ ನಿಕೇತನಾಯೈ <br>
-        ಪುಷ್ಟ್ಯೈ ನಮೋಽಸ್ತು ಪುರುಷೋತ್ತಮ ವಲ್ಲಭಾಯೈ ॥ 11 ॥ <br>
+        ಶ್ರುತ್ಯೈ ನಮೋ'ಸ್ತು ಶುಭಕರ್ಮಫಲಪ್ರಸೂತ್ಯೈ <br>
+        ರತ್ಯೈ ನಮೋ'ಸ್ತು ರಮಣೀಯಗುಣಾರ್ಣವಾಯೈ । <br>
+        ಶಕ್ತ್ಯೈ ನಮೋ'ಸ್ತು ಶತಪತ್ರನಿಕೇತನಾಯೈ <br>
+        ಪುಷ್ಟ್ಯೈ ನಮೋ'ಸ್ತು ಪುರುಷೋತ್ತಮವಲ್ಲಭಾಯೈ ॥ 11 ॥ <br>
 
         <span class="ENG">
-            shrutyai namO.astu shubhakarma phalaprasootyai <br>
-            ratyai namO.astu ramaNeeya guNaarNavaayai । <br>
-            shaktyai namO.astu shatapatra nikEtanaayai <br>
-            pushhTyai namO.astu purushhOttama vallabhaayai ॥ <br>
+            śrutyai namo'stu śubhakarmaphalaprasūtyai <br>
+            ratyai namo'stu ramaṇīyaguṇārṇavāyai । <br>
+            śaktyai namo'stu śatapatraniketanāyai <br>
+            puṣṭyai namo'stu puruṣottamavallabhāyai ॥ <br>
         </span>
     </p>
 
     <p>
-        ನಮೋಽಸ್ತು ನಾಳೀಕ ನಿಭಾನನಾಯೈ <br>
-        ನಮೋಽಸ್ತು ದುಗ್ಧೋದಧಿ ಜನ್ಮಭೂಮ್ಯೈ । <br>
-        ನಮೋಽಸ್ತು ಸೋಮಾಮೃತ ಸೋದರಾಯೈ <br>
-        ನಮೋಽಸ್ತು ನಾರಾಯಣ ವಲ್ಲಭಾಯೈ ॥ 12 ॥ <br>
+        ನಮೋ'ಸ್ತು ನಾಲೀಕನಿಭಾನನಾಯೈ <br>
+        ನಮೋ'ಸ್ತು ದುಗ್ಧೋದಧಿಜನ್ಮಭೂಮ್ಯೈ । <br>
+        ನಮೋ'ಸ್ತು ಸೋಮಾಮೃತಸೋದರಾಯೈ <br>
+        ನಮೋ'ಸ್ತು ನಾರಾಯಣವಲ್ಲಭಾಯೈ ॥ 12 ॥ <br>
 
         <span class="ENG">
-            namO.astu naaleeka nibhaananaayai <br>
-            namO.astu dugdhOdadhi janmabhoomyai । <br>
-            namO.astu sOmaamRRita sOdaraayai <br>
-            namO.astu naaraayaNa vallabhaayai ॥ <br>
+            namo'stu nālīkanibhānanāyai <br>
+            namo'stu dugdhodadhijanmabhūmyai । <br>
+            namo'stu somāmṛtasodarāyai <br>
+            namo'stu nārāyaṇavallabhāyai ॥ <br>
         </span>
     </p>
 
@@ -373,30 +315,30 @@
     </p>
 
     <p>
-        ಸಂಪತ್ಕರಾಣಿ ಸಕಲೇಂದ್ರಿಯ ನಂದನಾನಿ <br>
-        ಸಾಮ್ರಾಜ್ಯ ದಾನವಿಭವಾನಿ ಸರೋರುಹಾಕ್ಷಿ । <br>
-        ತ್ವದ್ವಂದನಾನಿ ದುರಿತಾ ಹರಣೋದ್ಯತಾನಿ <br>
+        ಸಂಪತ್ಕರಾಣಿ ಸಕಲೇಂದ್ರಿಯನಂದನಾನಿ <br>
+        ಸಾಮ್ರಾಜ್ಯದಾನವಿಭವಾನಿ ಸರೋರುಹಾಕ್ಷಿ । <br>
+        ತ್ವದ್ವಂದನಾನಿ ದುರಿತಾಹರಣೋದ್ಯತಾನಿ <br>
         ಮಾಮೇವ ಮಾತರನಿಶಂ ಕಲಯಂತು ಮಾನ್ಯೇ ॥ 16 ॥ <br>
 
         <span class="ENG">
-            saMpatkaraaNi sakalEMdriya naMdanaani <br>
-            saamraajya daanavibhavaani sarOruhaakshhi । <br>
-            tvadvaMdanaani duritaa haraNOdyataani <br>
-            maamEva maataranishaM kalayaMtu maanyE ॥ <br>
+            sampatkarāṇi sakalendriyanandanāni <br>
+            sāmrājyadānavibhavāni saroruhākṣi । <br>
+            tvadvandanāni duritāharaṇodyatāni <br>
+            māmeva mātaraniśaṃ kalayantu mānye ॥ <br>
         </span>
     </p>
 
     <p>
-        ಯತ್ಕಟಾಕ್ಷ ಸಮುಪಾಸನಾ ವಿಧಿಃ <br>
-        ಸೇವಕಸ್ಯ ಸಕಲಾರ್ಥ ಸಂಪದಃ । <br>
-        ಸಂತನೋತಿ ವಚನಾಂಗ ಮಾನಸೈಃ <br>
-        ತ್ವಾಂ ಮುರಾರಿಹೃದಯೇಶ್ವರೀಂ ಭಜೇ ॥ 17 ॥ <br>
+        ಯತ್ಕಟಾಕ್ಷಸಮುಪಾಸನಾವಿಧಿಃ <br>
+        ಸೇವಕಸ್ಯ ಸಕಲಾರ್ಥಸಂಪದಃ । <br>
+        ಸಂತನೋತಿ ವಚನಾಂಗಮಾನಸೈ- <br>
+        ಸ್ತ್ವಾಂ ಮುರಾರಿಹೃದಯೇಶ್ವರೀಂ ಭಜೇ ॥ 17 ॥ <br>
 
         <span class="ENG">
-            yatkaTaakshha samupaasanaa vidhiH <br>
-            sEvakasya sakalaartha saMpadaH । <br>
-            saMtanOti vachanaaMga maanasaiH <br>
-            tvaaM muraarihRRidayEshvareeM bhajE ॥ <br>
+            yatkaṭākṣasamupāsanāvidhiḥ <br>
+            sevakasya sakalārthasampadaḥ । <br>
+            santanoti vacanāṅgamānasai- <br>
+            stvāṃ murārihṛdayeśvarīṃ bhaje ॥ <br>
         </span>
     </p>
 
@@ -406,29 +348,29 @@
 
     <p>
         ಸರಸಿಜನಿಲಯೇ ಸರೋಜಹಸ್ತೇ <br>
-        ಧವಳತಮಾಂಶುಕ ಗಂಧಮಾಲ್ಯಶೋಭೇ । <br>
+        ಧವಲತಮಾಂಶುಕಗಂಧಮಾಲ್ಯಶೋಭೇ । <br>
         ಭಗವತಿ ಹರಿವಲ್ಲಭೇ ಮನೋಜ್ಞೇ <br>
-        ತ್ರಿಭುವನಭೂತಿಕರೀ ಪ್ರಸೀದಮಹ್ಯಂ ॥ 18 ॥ <br>
+        ತ್ರಿಭುವನಭೂತಿಕರಿ ಪ್ರಸೀದ ಮಹ್ಯಂ ॥ 18 ॥ <br>
 
         <span class="ENG">
-            sarasijanilayE sarOjahastE <br>
-            dhavalatamaaMshuka gaMdhamaalyashObhE । <br>
-            bhagavati harivallabhE manOjjhNE <br>
-            tribhuvanabhootikaree praseedamahyaM ॥ <br>
+            sarasijanilaye sarojahaste <br>
+            dhavalatamāṃśukagandhamālyaśobhe । <br>
+            bhagavati harivallabhe manojñe <br>
+            tribhuvanabhūtikari prasīda mahyam ॥ <br>
         </span>
     </p>
 
     <p>
-        ದಿಗ್ಘಸ್ತಿಭಿಃ ಕನಕ ಕುಂಭಮುಖಾವಸೃಷ್ಟ <br>
-        ಸ್ವರ್ವಾಹಿನೀ ವಿಮಲಚಾರುಜಲಾಪ್ಲುತಾಂಗೀಂ । <br>
-        ಪ್ರಾತರ್ನಮಾಮಿ ಜಗತಾಂ ಜನನೀಮಶೇಷ <br>
-        ಲೋಕಧಿನಾಥ ಗೃಹಿಣೀಮಮೃತಾಬ್ಧಿಪುತ್ರೀಂ ॥ 19 ॥ <br>
+        ದಿಗ್ಘಸ್ತಿಭಿಃ ಕನಕಕುಂಭಮುಖಾವಸೃಷ್ಟ- <br>
+        ಸ್ವರ್ವಾಹಿನೀವಿಮಲಚಾರುಜಲಪ್ಲುತಾಂಗೀಂ । <br>
+        ಪ್ರಾತರ್ನಮಾಮಿ ಜಗತಾಂ ಜನನೀಮಶೇಷ- <br>
+        ಲೋಕಾಧಿನಾಥಗೃಹಿಣೀಮಮೃತಾಬ್ಧಿಪುತ್ರೀಂ ॥ 19 ॥ <br>
 
         <span class="ENG">
-            digghastibhiH kanaka kuMbhamukhaavasRRishhTa <br>
-            svarvaahinee vimalachaarujalaaplutaaMgeem । <br>
-            praatarnamaami jagataaM jananeemashEshha <br>
-            lOkadhinaatha gRRihiNeemamRRitaabdhiputreeM ॥ <br>
+            digghastibhiḥ kanakakumbhamukhāvasṛṣṭa- <br>
+            svarvāhinīvimalacārujalaplutāṅgīm । <br>
+            prātarnamāmi jagatāṃ jananīmaśeṣa- <br>
+            lokādhināthagṛhiṇīmamṛtābdhiputrīm ॥ <br>
         </span>
     </p>
 
@@ -467,16 +409,16 @@
     <h3>ಫಲ ಶ್ರುತಿ (Phala Shruthi)</h3>
 
     <p>
-        ಸ್ತುವಂತಿ ಯೇ ಸ್ತುತಿಭಿರಮೀಭಿರನ್ವಹಂ <br>
+        ಸ್ತುವಂತಿ ಯೇ ಸ್ತುತಿಭಿರಮೂಭಿರನ್ವಹಂ <br>
         ತ್ರಯೀಮಯೀಂ ತ್ರಿಭುವನಮಾತರಂ ರಮಾಂ । <br>
-        ಗುಣಾಧಿಕಾ ಗುರುತುರ ಭಾಗ್ಯ ಭಾಗಿನಃ <br>
-        ಭವಂತಿ ತೇ ಭುವಿ ಬುಧ ಭಾವಿತಾಶಯಾಃ ॥ <br>
+        ಗುಣಾಧಿಕಾ ಗುರುತರಭಾಗ್ಯಭಾಜಿನೋ <br>
+        ಭವಂತಿ ತೇ ಭುವಿ ಬುಧಭಾವಿತಾಶಯಾಃ ॥ <br>
 
         <span class="ENG">
-            stuvaMti yE stutibhirameebhiranvahaM <br>
-            trayeemayeeM tribhuvanamaataraM ramaaM । <br>
-            guNaadhikaa gurutura bhaagya bhaaginaH <br>
-            bhavaMti tE bhuvi budha bhaavitaashayaaH ॥ <br>
+            stuvanti ye stutibhiramūbhiranvahaṃ <br>
+            trayīmayīṃ tribhuvanamātaraṃ ramām । <br>
+            guṇādhikā gurutarabhāgyabhājino <br>
+            bhavanti te bhuvi budhabhāvitāśayāḥ ॥ <br>
         </span>
     </p>
 
@@ -506,6 +448,7 @@
 
 <h3>References</h3>
 <ul>
+    <li>https://www.sringeri.net/stotras/devistotrani/kanakadharastotram</li>
     <li>https://www.sringeri.net/stotras/devistotrani/kanakadharastotram</li>
 </ul>
 
