--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     </li>
                     <li> <a href="puja/vyuha-lakshmi-tantra.html">Vyuha Lakshmi Tantra</a> </li>
                     <li> <a href="stotram/lakshmi-ashtakam.html">Lakshmi Ashtakam</a> </li>
-                    <li> <a href="stotram/kanakadhara-stotram.html">Kanakadara Stotram 🚧</a> </li>
+                    <li> <a href="stotram/kanakadhara-stotram.html">Kanakadara Stotram</a> </li>
                     <li> <a href="stotram/sri-suktam.html">Sri Suktam</a> </li>
                     <li> <a href="stotram/lakshmi-ashtottara-satanaama-stotram.html">Lakshmi Ashtottara Satanaama
                             Stotram</a> </li>
