--- a/stotram/sri-suktam.html
+++ b/stotram/sri-suktam.html
@@ -21,12 +21,12 @@
 
     ಓಂ || <br><br><br>
     
-    ಹಿರ॑ಣ್ಯವರ್ಣಾಂ॒ ಹರಿ॑ಣೀಂ ಸು॒ವರ್ಣರ॑ಜ॒ತಸ್ರ॑ಜಾಮ್ | <br><br>
+    ಹಿರ॑ಣ್ಯವರ್ಣಾಂ॒ ಹರಿ॑ಣೀಂ ಸು॒ವರ್ಣ॑ರಜ॒ತಸ್ರ॑ಜಾಮ್ | <br><br>
 
     ಚಂ॒ದ್ರಾಂ॒ ಹಿ॒ರಣ್ಮ॑ಯೀಂ ಲ॒ಕ್ಷ್ಮೀಂ ಜಾತ॑ವೇದೋ ಮ॒ ಆವ॑ಹ || ೧ || <br><br><br>
 
 
-    ತಾಂ ಮ॒ ಆವ॑ಹ॒ ಜಾತ॑ವೇದೋ ಲ॒ಕ್ಷ್ಮೀಮನ॑ಪಗಾ॒ಮಿನೀ᳚ಮ್| <br><br>
+    ತಾಂ ಮ॒ ಆವ॑ಹ॒ ಜಾತ॑ವೇದೋ ಲ॒ಕ್ಷ್ಮೀಮನ॑ಪಗಾ॒ಮಿನೀ᳚ಮ್ | <br><br>
 
     ಯಸ್ಯಾಂ॒ ಹಿರ॑ಣ್ಯಂ ವಿ॒ನ್ದೇಯಂ॒ ಗಾಮಶ್ವಂ॒ ಪುರು॑ಷಾನ॒ಹಮ್ || ೨ || <br><br><br>
 
@@ -38,67 +38,67 @@
 
     ಕಾಂ॒ ಸೋ॒ಽಸ್ಮಿ॒ ತಾಂ ಹಿರ॑ಣ್ಯಪ್ರಾಕಾರಾಮಾ॒ರ್ದ್ರಾಂ ಜ್ವಲ॑ನ್ತೀಂ ತೃ॒ಪ್ತಾಂ ತ॒ರ್ಪಯ॑ನ್ತೀಮ್ | <br><br>
 
-    ಪ॒ದ್ಮೇ॒ ಸ್ಥಿ॒ತಾಂ ಪ॒ದ್ಮವ॑ರ್ಣಾಂ॒ ತಾಮಿ॒ಹೋಪ॑ಹ್ವಯೇ॒ ಶ್ರಿಯಮ್ || ೪ || <br><br><br>
+    ಪ॒ದ್ಮೇ॒ಸ್ಥಿ॒ತಾಂ ಪ॒ದ್ಮವ॑ರ್ಣಾಂ॒ ತಾಮಿ॒ಹೋಪ॑ಹ್ವಯೇ॒ ಶ್ರಿಯ॑ಮ್ || ೪ || <br><br><br>
 
 
-    ಚಂ॒ದ್ರಾಂ ಪ್ರ॑ಭಾ॒ಸಾಂ ಯಶ॑ಸಾ॒ ಜ್ವಲ॑ನ್ತೀಂ ಶ್ರಿಯಂ॑ಲೋ॒ಕೇ ದೇ॒ವಜು॑ಷ್ಟಾಮುದಾ॒ರಾಮ್ | <br><br>
+    ಚಂ॒ದ್ರಾಂ ಪ್ರ॑ಭಾ॒ಸಾಂ ಯಶ॑ಸಾ॒ ಜ್ವಲ॑ನ್ತೀಂ ಶ್ರಿಯಂ॑ ಲೋ॒ಕೇ ದೇ॒ವಜು॑ಷ್ಟಾಮುದಾ॒ರಾಮ್ | <br><br>
 
     ತಾಂ ಪ॒ದ್ಮಿನೀ॑ಮೀಂ॒ ಶರ॑ಣಮ॒ಹಂ ಪ್ರಪ॑ದ್ಯೇಽಲ॒ಕ್ಷ್ಮೀರ್ಮೇ॑ ನಶ್ಯತಾಂ॒ ತ್ವಾಂ ವೃ॑ಣೇ || ೫ || <br><br><br>
 
 
-    ಆ॒ದಿ॒ತ್ಯವ॑ರ್ಣೇ॒ ತಪ॒ಸೋಽಧಿ॑ಜಾ॒ತೋ ವನ॒ಸ್ಪತಿ॒ಸ್ತವ॑ ವೃ॒ಕ್ಷೋಽಥ॑ ಬಿ॒ಲ್ವಃ | <br><br>
+    ಆ॒ದಿ॒ತ್ಯವ॑ರ್ಣೇ॒ ತಪ॒ಸೋಽಧಿ॑ ಜಾ॒ತೋ ವನ॒ಸ್ಪತಿ॒ಸ್ತವ॑ ವೃ॒ಕ್ಷೋಽಥ॑ ಬಿ॒ಲ್ವಃ | <br><br>
 
-    ತಸ್ಯ॒ ಫಲಾ॑ನಿ॒ ತಪ॒ಸಾನು॑ದನ್ತು ಮಾ॒ಯಾನ್ತ॑ರಾ॒ಯಾಶ್ಚ॑ ಬಾ॒ಹ್ಯಾ॑ ಅಲ॒ಕ್ಷ್ಮೀಃ || ೬ || <br><br><br>
+    ತಸ್ಯ॒ ಫಲಾ॑ನಿ॒ ತಪ॒ಸಾನು॑ದನ್ತು ಮಾ॒ಯಾಽನ್ತ॑ರಾ॒ಯಾಶ್ಚ॑ ಬಾ॒ಹ್ಯಾ ಅ॑ಲ॒ಕ್ಷ್ಮೀಃ || ೬ || <br><br><br>
 
 
     ಉಪೈ॑ತು॒ ಮಾಂ ದೇ॑ವಸ॒ಖಃ ಕೀ॒ರ್ತಿಶ್ಚ॒ ಮಣಿ॑ನಾ ಸ॒ಹ | <br><br>
 
-    ಪ್ರಾ॒ದು॒ರ್ಭೂ॒ತೋಽಸ್ಮಿ॑ ರಾಷ್ಟ್ರೇಽಸ್ಮಿನ್ ಕೀ॒ರ್ತಿಮೃ॑ದ್ಧಿಂ ದದಾ॒ತು ಮೇ || ೭ || <br><br><br>
+    ಪ್ರಾ॒ದು॒ರ್ಭೂ॒ತೋಽಸ್ಮಿ॑ ರಾಷ್ಟ್ರೇಽಸ್ಮಿನ್ ಕೀ॒ರ್ತಿ ಮೃ॑ದ್ಧಿಂ ದದಾ॒ತು॑ ಮೇ || ೭ || <br><br><br>
 
 
-    ಕ್ಷುತ್ಪಿ॑ಪಾ॒ಸಾಮ॑ಲಾಂ ಜ್ಯೇ॒ಷ್ಠಾಮ॒ಲ॒ಕ್ಷ್ಮೀಂ ನಾ॑ಶಯಾ॒ಮ್ಯಹಮ್ | <br><br>
+    ಕ್ಷುತ್ಪಿ॑ಪಾ॒ಸಾಮ॑ಲಾಂ ಜ್ಯೇ॒ಷ್ಠಾ॒ಮ॒ಲ॒ಕ್ಷ್ಮೀಂ ನಾ॑ಶಯಾ॒ಮ್ಯಹಮ್ | <br><br>
 
-    ಅಭೂ॑ತಿ॒ಮಸ॑ಮೃದ್ಧಿಂ॒ ಚ॒ ಸರ್ವಾಂ॒ ನಿರ್ಣು॑ದ ಮೇ॒ ಗೃಹಾತ್ || ೮ || <br><br><br>
+    ಅಭೂ॑ತಿ॒ಮಸ॑ಮೃದ್ಧಿಂ॒ ಚ॒ ಸರ್ವಾಂ॒ ನಿರ್ಣು॑ದ ಮೇ॒ ಗೃಹಾ॑ತ್ || ೮ || <br><br><br>
 
 
-    ಗಂ॒ಧ॒ದ್ವಾ॒ರಾಂ ದು॑ರಾಧ॒ರ್ಷಾಂ॒ ನಿ॒ತ್ಯಪು॑ಷ್ಟಾಂ ಕರೀ॒ಷಿಣೀ᳚ಮ್ | <br><br>
+    ಗಂ॒ಧ॒ದ್ವಾ॒ರಾಂ ದು॑ರಾಧ॒ರ್ಷಾಂ॒ ನಿ॒ತ್ಯಪು॑ಷ್ಟಾಂ ಕರೀ॒ಷಿಣೀ॑ಮ್ | <br><br>
 
-    ಈ॒ಶ್ವರೀಂ᳚ ಸರ್ವ॑ಭೂತಾ॒ನಾಂ॒ ತಾಮಿ॒ಹೋಪ॑ಹ್ವಯೇ॒ ಶ್ರಿಯಮ್ || ೯ || <br><br><br>
+    ಈ॒ಶ್ವರೀಂ॑ ಸರ್ವ॑ಭೂತಾ॒ನಾಂ॒ ತಾಮಿ॒ಹೋಪ॑ಹ್ವಯೇ॒ ಶ್ರಿಯ॑ಮ್ || ೯ || <br><br><br>
 
 
     ಮನ॑ಸಃ॒ ಕಾಮ॒ಮಾಕೂ॑ತಿಂ ವಾ॒ಚಃ ಸ॒ತ್ಯಮ॑ಶೀಮಹಿ | <br><br>
 
-    ಪ॒ಶೂ॒ನಾಂ ರೂ॒ಪಮನ್ನ॑ಸ್ಯ॒ ಮಯಿ॒ ಶ್ರೀಃ ಶ್ರ॑ಯತಾಂ॒ ಯಶಃ॑ || ೧೦ || <br><br><br>
+    ಪ॒ಶೂ॒ನಾಂ ರೂ॒ಪ॑ಮನ್ನ॒ಸ್ಯ॒ ಮ॒ಯಿ॒ ಶ್ರೀಃ ಶ್ರ॑ಯತಾಂ॒ ಯಶಃ॑ || ೧೦ || <br><br><br>
 
 
-    ಕ॒ರ್ದಮೇ॑ನ ಪ್ರ॑ಜಾಭೂ॒ತಾ॒ ಮ॒ಯಿ ಸಂಭ॑ವ ಕ॒ರ್ದಮ | <br><br>
+    ಕರ್ದ॑ಮೇ॒ನ ಪ್ರ॑ಜಾಭೂ॒ತಾ॒ ಮ॒ಯಿ ಸಂ॑ಭವ ಕ॒ರ್ದಮ | <br><br>
 
     ಶ್ರಿಯಂ॑ ವಾ॒ಸಯ॑ ಮೇ ಕು॒ಲೇ ಮಾ॒ತರಂ॑ ಪದ್ಮ॒ಮಾಲಿ॑ನೀಮ್ || ೧೧ || <br><br><br>
 
 
-    ಆಪಃ॑ ಸೃ॒ಜನ್ತು॑ ಸ್ನಿಗ್ಧಾ॒ನಿ॒ ಚಿ॒ಕ್ಲೀ॒ತ ವ॑ಸ ಮೇ॒ ಗೃಹೇ | <br><br>
+    ಆಪಃ॑ ಸೃ॒ಜನ್ತು॑ ಸ್ನಿ॒ಗ್ಧಾ॒ನಿ॒ ಚಿ॒ಕ್ಲೀ॒ತ ವಸ॑ ಮೇ ಗೃ॒ಹೇ | <br><br>
 
     ನಿ ಚ॑ ದೇ॒ವೀಂ ಮಾ॒ತರಂ॒ ಶ್ರಿಯಂ॑ ವಾ॒ಸಯ॑ ಮೇ ಕು॒ಲೇ || ೧೨ || <br><br><br>
 
 
-    ಆ॒ರ್ದ್ರಾಂ ಪು॒ಷ್ಕರಿ॑ಣೀಂ ಪು॒ಷ್ಟಿಂ॒ ಪಿಂ॒ಗ॒ಲಾಂ ಪ॑ದ್ಮಮಾ॒ಲಿನೀಮ್ | <br><br>
+    ಆ॒ರ್ದ್ರಾಂ ಪು॒ಷ್ಕರಿ॑ಣೀಂ ಪು॒ಷ್ಟಿಂ॒ ಸು॒ವರ್ಣಾಂ॑ ಹೇಮ॒ಮಾಲಿ॑ನೀಮ್ | <br><br>
 
-    ಚಂ॒ದ್ರಾಂ ಹಿ॒ರಣ್ಮ॑ಯೀಂ ಲ॒ಕ್ಷ್ಮೀಂ ಜಾತ॑ವೇದೋ ಮ॒ ಆವ॑ಹ || ೧೩ || <br><br><br>
-
-
-    ಆ॒ರ್ದ್ರಾಂ ಯಃ॒ ಕರಿ॑ಣೀಂ ಯ॒ಷ್ಟಿಂ॒ ಸು॒ವರ್ಣಾಂ ಹೇ॑ಮಮಾ॒ಲಿನೀಮ್ | <br><br>
-
-    ಸೂ॒ರ್ಯಾಂ ಹಿ॒ರಣ್ಮ॑ಯೀಂ ಲ॒ಕ್ಷ್ಮೀಂ॒ ಜಾತ॑ವೇದೋ ಮ॒ ಆವ॑ಹ || ೧೪ || <br><br><br>
+    ಸೂರ್ಯಾಂ॑ ಹಿ॒ರಣ್ಮ॑ಯೀಂ ಲ॒ಕ್ಷ್ಮೀಂ॒ ಜಾತ॑ವೇದೋ ಮ॒ ಆವ॑ಹ || ೧೩ || <br><br><br>
 
 
-    ತಾಂ ಮ॒ ಆವ॑ಹ॒ ಜಾತ॑ವೇದೋ ಲ॒ಕ್ಷ್ಮೀಮನ॑ಪಗಾ॒ಮಿನೀ᳚ಮ್ | <br><br>
+    ಆ॒ರ್ದ್ರಾಂ ಯಃ॒ ಕರಿ॑ಣೀಂ ಯ॒ಷ್ಟಿಂ॒ ಪಿಂ॒ಗಲಾಂ॑ ಪ॑ದ್ಮಮಾಲಿ॑ನೀಮ್ | <br><br>
 
-    ಯಸ್ಯಾಂ॒ ಹಿರ॑ಣ್ಯಂ॒ ಪ್ರಭೂ॑ತಂ॒ ಗಾವೋ॑ ದಾ॒ಸ್ಯೋಽಶ್ವಾ᳚ನ್ ವಿ॒ನ್ದೇಯಂ॒ ಪುರು॑ಷಾನ॒ಹಮ್ || ೧೫ || <br><br><br>
+    ಚಂ॒ದ್ರಾಂ॑ ಹಿ॒ರಣ್ಮ॑ಯೀಂ ಲ॒ಕ್ಷ್ಮೀಂ॒ ಜಾತ॑ವೇದೋ ಮ॒ ಆವ॑ಹ || ೧೪ || <br><br><br>
 
 
-    ಓಂ ಮ॒ಹಾ॒ದೇ॒ವ್ಯೈ ಚ॑ ವಿ॒ದ್ಮಹೇ॑ ವಿಷ್ಣುಪ॒ತ್ನ್ಯೈ ಚ॑ ಧೀಮಹಿ | <br><br>
+    ತಾಂ ಮ॒ ಆವ॑ಹ॒ ಜಾತ॑ವೇದೋ ಲ॒ಕ್ಷ್ಮೀಮನ॑ಪಗಾ॒ಮಿನೀ॑ಮ್ | <br><br>
 
-    ತನ್ನೋ॑ ಲಕ್ಷ್ಮೀಃ ಪ್ರಚೋ॒ದಯಾ᳚ತ್ || ೧೯ || <br><br><br>
+    ಯಸ್ಯಾಂ॒ ಹಿರ॑ಣ್ಯಂ॒ ಪ್ರಭೂ॑ತಂ॒ ಗಾವೋ॑ ದಾ॒ಸ್ಯೋಽಶ್ವಾ॑ನ್ ವಿ॒ನ್ದೇಯಂ॒ ಪುರು॑ಷಾನ॒ಹಮ್ || ೧೫ || <br><br><br>
+
+
+    ಓಂ ಮ॒ಹಾ॒ಲ॒ಕ್ಷ್ಮೈ ಚ॑ ವಿ॒ದ್ಮಹೇ॑ ವಿಷ್ಣುಪ॒ತ್ನ್ಯೈ ಚ॑ ಧೀಮಹಿ | <br><br>
+
+    ತನ್ನೋ॑ ಲಕ್ಷ್ಮೀಃ ಪ್ರಚೋ॒ದಯಾ॑ತ್ || ೧೯ || <br><br><br>
 
     Youtube - better svaras <br>
     <iframe width="500" height="100" src="https://www.youtube.com/embed/9nlK7KkGT74?si=4jPS6ewMnr91ipiz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe><br><br>
